Fix recipes according to textidote findings

--- a/Sections/Bread/brioche.tex
+++ b/Sections/Bread/brioche.tex
@@ -28,9 +28,9 @@
 	\preparation
 	{%
 		\step Mehl in eine Schüssel geben, eine Mulde eindrücken. Hefe, Zucker und Milch in der Mulde zu einem dünnen Brei anrühren, mit wenig Mehl bestreuen. Stehen lassen, bis der Brei schäumt.
-		\step Salz, Butter und Ei beigeben, mit einer Kelle oder dem Knethaken des Handrührgerätes zu einem weichen, glatten Teig kneten. Zugedeckt bei Raumtemperatur ca. 1Std. aufs Doppelte aufgehen lassen.
+		\step Salz, Butter und Ei beigeben, mit einer Kelle oder dem Knethaken des Handrührgeräts zu einem weichen, glatten Teig kneten. Zugedeckt bei Raumtemperatur ca. eine Stunde auf das Doppelte aufgehen lassen.
 		\step Teig in die gefettete Cakeform geben und nochmals ca. 30 Min. aufgehen lassen, dann mit Eigelb bestreichen.
-		\step ca. 45 Min. in der unteren Hälfte des auf 200 Grad vorgeheizten Ofens.Herausnehmen,leicht abkühlen, aus der Form nehmen,auf einem Gitter auskühlen.
+		\step Ca. 45 Min. in der unteren Hälfte des auf 200 Grad vorgeheizten Ofens. Herausnehmen, leicht abkühlen, aus der Form nehmen, auf einem Gitter auskühlen.
 	}
 	
 	\hint
