--- a/Sections/Bread/pizzateig.tex
+++ b/Sections/Bread/pizzateig.tex
@@ -24,12 +24,12 @@
 
 	\preparation
 	{
-		\step Mehl mit Hefe gut durchr"uhren
+		\step Mehl mit Hefe gut durchrühren
 		\step Nach und nach Wasser hinzugeben bis ein glatter Teig entsteht
-		\step Salz und "Ol dazugeben und mehrere Minuten durchkneten
-		\step Teig 1-2h abgedeckt in der Sch"ussel gehen lassen
-		\step Teig auswallen und nach belieben belegen
-		\step Für 8-10 Minuten im auf 250°C vorgehizten Ofen backen
+		\step Salz und Öl dazugeben und mehrere Minuten durchkneten
+		\step Teig 1-2h abgedeckt in der Schüssel gehen lassen
+		\step Teig auswallen und nach Belieben belegen
+		\step Für 8-10 Minuten im auf 250 °C vorgeheizten Ofen backen
 	}
 
 	\hint{
