--- a/Sections/Bread/speckzopf.tex
+++ b/Sections/Bread/speckzopf.tex
@@ -22,21 +22,21 @@
 		\unit[10]{g} & Hefe\\
 		\unit[3-3.5]{dl} & Milch \\
 		\unit[25]{g} & Butter \\
-		\unit[175-200]{g} & Speckw"urfeli \\
+		\unit[175-200]{g} & Speckwürfeli \\
 		1 & Ei
 	}
 	
 	\preparation
 	{%
-		\step Butter schmelzen lassen, abk"uhlen lassen.
-		\step Mehl, Salz, Pfeffer und Rosmarin in einer Sch"ussel mischen und eine Mulde formen.
-		\step Hefe mit etwas Milch aufl"osen und in die Mulde giessen.
-		\step Restliche Milch und Butter beif"ugen, das Ganze zu einem geschmeidigen Teig kneten.
+		\step Die Butter schmelzen lassen, abkühlen lassen.
+		\step Mehl, Salz, Pfeffer und Rosmarin in einer Schüssel mischen und eine Mulde formen.
+		\step Hefe mit etwas Milch auflösen und in die Mulde giessen.
+		\step Restliche Milch und Butter beifügen, das Ganze zu einem geschmeidigen Teig kneten.
 		\step Zugedeckt eine Stunde ruhen lassen.
-		\step Speck in einer Bratpfanne anbraten und dann abk"uhlen lassen. Danach unter den Teig kneten.
-		\step Teig zu gleich grossen Str"angen rollen und zu einem Zopf flechten. Auf einem Backpapier nochmals 30-60 Minuten aufgehen lassen.
+		\step Speck in einer Bratpfanne anbraten und dann abkühlen lassen. Danach unter den Teig kneten.
+		\step Teig zu gleich grossen Strängen rollen und zu einem Zopf flechten. Auf einem Backpapier nochmals 30-60 Minuten aufgehen lassen.
 		\step Mit einem Eigelb bepinseln.
-		\step Bei \unit[200]{C} im unteren Teil des Ofens f"ur 35-45 Minuten backen.
+		\step Bei \unit[200]{C} im unteren Teil des Ofens für 35-45 Minuten backen.
 	}
 	
 	
