--- a/Sections/Bread/zopf.tex
+++ b/Sections/Bread/zopf.tex
@@ -29,14 +29,14 @@
 	\preparation
 	{%
 		\step Mehl, Salz und Zucker in einer Schüssel mischen.
-		\step Hefe zerbröckeln, daruntermischen.
+		\step Hefe zerbröckeln, darunter mischen.
 		\step Butter in Würfel schneiden, mit der Milch beigeben, mischen, zu einem weichen glatten Teig kneten.
 		\step Teig zugedeckt bei Raumtemperatur ca. 1½ Std. aufs Doppelte aufgehen lassen.
 		\step Teig in zwei Portionen teilen, zu je ca. 70 cm langen Strängen formen, die an den Enden dünner werden.
 		\step Stränge zu einem Zopf flechten, auf ein mit Backpapier belegtes Blech legen.
 		\step Eigelb und Milch verrühren, Zopf damit bestreichen.
 		\step Auf einem Backpapier nochmals 30-60 Minuten aufgehen lassen. Danach nochmals bestreichen.
-		\step Bei \unit[200]{C} im unteren Teil des Ofens für ca 30 Minuten backen.
+		\step Bei \unit[200]{C} im unteren Teil des Ofens für ca. 30 Minuten backen.
 	}
 	
 	
