--- a/Sections/Bread/zuercherbrot.tex
+++ b/Sections/Bread/zuercherbrot.tex
@@ -6,7 +6,7 @@
 	portion = 2 Brote,
 	calory
 	]
-	{Z"urcherbrot}
+	{Zürcherbrot}
 	
 	\graph
 	{
@@ -29,7 +29,7 @@
 		\step Den Backofen auf 220 Grad Ober-/Unterhitze vorheizen
 		\step Den Teig aus der Schüssel nehmen, leicht zusammendrücken und zwei lange Brotlaibe formen
 		\step Die Brote auf ein mit Backpapier belegtes Blech legen und nochmals kurz gehen lassen		
-		\step Die Brote drei- bis fünfmal mit flachgeführter Klinge schräg einschneiden
+		\step Die Brote drei- bis fünfmal mit flach geführter Klinge schräg einschneiden
 		\step Im Ofen ca. 45 Minuten backen, danach gleich mit Wasser bestreichen
 	}
 	
