--- a/Sections/Breakfast/frenchtoast.tex
+++ b/Sections/Breakfast/frenchtoast.tex
@@ -10,7 +10,7 @@
 	{French Toast}
 	\graph
 	{
-		big=pictures/frenchtoast/frenchtoast
+		big=pictures/frenchtoast/frenchtoast.jpg
 	}
 	
 	\ingredients
@@ -31,8 +31,8 @@
 	\preparation
 	{
 		\step Eier in einer Auflaufform aufschlagen
-		\step Zucker, Zimt und Milch hinzugeben und verru"hren
-		\step Toastscheiben in Flu"ssigkeit einlegen bis sie sich vollgesogen haben
+		\step Zucker, Zimt und Milch hinzugeben und verrühren
+		\step Toastscheiben in Flüssigkeit einlegen bis sie sich vollgesogen haben
 		\step Butter in Pfanne erhitzen, Toast von beiden Seiten ca. 5 Minuten anbraten
 		\step Toast mit Toppings belegen
 	}
