--- a/Sections/Cocktails/amaretto_ginger_ale.tex
+++ b/Sections/Cocktails/amaretto_ginger_ale.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{Amaretto Ginger Ale}
+	{Amaretto Ginger-Ale}
 	
 	\graph
 	{
@@ -18,13 +18,13 @@
 	{
 		\unit[40]{cl} & Amaretto \\
 		\unit[20]{cl} & Zitronensaft \\
-		& Ginger Ale \\
-		& Eisw"urfel
+		& Ginger-Ale \\
+		& Eiswürfel
 	}
 	
 	\preparation
 	{
-		\step Eisw"urfel in das Glas geben
+		\step Eiswürfel in das Glas geben
 		\step Amaretto und Zitronensaft dazu geben.
 	}
 \end{recipe}
