--- a/Sections/Cocktails/ginfizz.tex
+++ b/Sections/Cocktails/ginfizz.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{Gin Fizz}
+	{Gin-Fizz}
 	
 	\graph
 	{
@@ -25,9 +25,9 @@
 	
 	\preparation
 	{
-		\step Gin, Zitronensaft und Zuckersirup mit Eiswürfeln in Shaker geben
-		\step Gut schütteln
-		\step In ein Longdrinkglas abseihen
-		\step Mit Soda auffüllen
+		\step Gin, Zitronensaft und Zuckersirup mit Eiswürfeln in Shaker geben.
+		\step Gut schütteln.
+		\step In ein Longdrinkglas abseihen.
+		\step Mit Soda auffüllen.
 	}
 \end{recipe}
