--- a/Sections/Cocktails/sloeginfizz.tex
+++ b/Sections/Cocktails/sloeginfizz.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{Sloe Gin Fizz}
+	{Sloe Gin-Fizz}
 	
 	\graph
 	{
@@ -27,8 +27,8 @@
 	\preparation
 	{
 		\step Sloe Gin, Gin, Zitronensaft und Zuckersirup mit Eiswürfeln in Shaker geben
-		\step Gut schütteln
-		\step In ein Longdrinkglas abseihen
+		\step Gut schütteln.
+		\step In ein Longdrinkglas abseihen.
 		\step Mit Soda auffüllen
 	}
 \end{recipe}
