--- a/Sections/Cocktails/strawberry_kiss.tex
+++ b/Sections/Cocktails/strawberry_kiss.tex
@@ -16,7 +16,7 @@
 	
 	\ingredients
 	{
-		\unit[2]{cl} & Jack Daniel's \\
+		\unit[2]{cl} & Jack Daniels \\
 		\unit[2]{cl} & Erdbeersirup \\
 		3 & Erdbeeren \\
 		& fein gestossenes Eis \\
@@ -25,13 +25,13 @@
 	
 	\preparation
 	{
-		\step Rahm schlagen dass er etwas steif wird.
+		\step Rahm etwas steif schlagen.
 		\step Alles bis auf den Rahm in einen Mixer geben und ca. 10 Sekunden mixen.
-		\step In ein (gek"uhltes) Glas geben, Rahm langsam dar"uber giessen oder l"offeln.
+		\step In ein (gekühltes) Glas geben, Rahm langsam darüber giessen oder löffeln.
 	}
 	
 	\hint
 	{
-		Funktioniert auch mit Himbeeren \& Himbeersirup oder anderen Fr"uchten.
+		Funktioniert auch mit Himbeeren \& Himbeersirup oder anderen Früchten.
 	}
 \end{recipe}
