--- a/Sections/Cocktails/sugar_syrup.tex
+++ b/Sections/Cocktails/sugar_syrup.tex
@@ -21,12 +21,12 @@
 	
 	\preparation
 	{
-		\step Der weiße Rübenzucker Zucker wird einen Topf gefüllt und mit möglichst kochendem Wasser übergossen
-		\step Die Mischung wird zwischen fünf und zwanzig Minuten bei 100 Grad weitergekocht
-		\step Am Ende der Sirupherstellung sollte ein klarer, zähflüssiger Sirup entstehen, der in ein sauberes und verschließbares Gefäß gefüllt wird
+		\step Der weisse Rübenzucker Zucker wird einen Topf gefüllt und mit möglichst kochendem Wasser übergossen
+		\step Die Mischung wird zwischen 5 und 20 Minuten bei 100 Grad weiter gekocht
+		\step Am Ende der Sirup Herstellung sollte ein klarer, zähflüssiger Sirup entstehen, der in ein sauberes und verschliessbares Gefäss gefüllt wird
 	}
 	
 	\hint{
-		Der selbst hergestellte Zuckersirup ist im Kühlschrank einige Wochen haltbar. Nach dem Befüllen und nach jeder Entnahme sollte die Flasche von außen gründlich gereinigt werden
+		Der selbst hergestellte Zuckersirup ist im Kühlschrank einige Wochen haltbar. Nach dem Befüllen und nach jeder Entnahme sollte die Flasche von aussen gründlich gereinigt werden
 	}
 \end{recipe}
