--- a/Sections/Dessert/banana_bread.tex
+++ b/Sections/Dessert/banana_bread.tex
@@ -21,20 +21,20 @@
 		1-2 & Eier \\
 		\unit[1]{Pack} & Backpulver \\
 		\unit[1]{Pack} & Vanillezucker \\
-		\unit[4]{EL} & "Ol \\
+		\unit[4]{EL} & Öl \\
 		\unit[300]{g} & Mehl \\		
 		& Mandeln \\	
-		& Schokost"uckchen \\	
-		& Butter (zum einfetten)
+		& Schokostückchen \\	
+		& Butter (zum Einfetten)
 	}
 	
 	\preparation
 	{
-		\step Bananen zerd"ucken.
-		\step Mandeln in Pfanne bei kleiner Hitze anr"osten, ab und zu wenden.
-		\step Zucker, Eier, "Ol, Mehl, Backpulver und Vanillezucker in Bananenmasse einr"uhren.
-		\step Mandeln und nach belieben Schockost"uckchen dem Teig hinzuf"ugen.
+		\step Bananen zerdrücken.
+		\step Mandeln in Pfanne bei kleiner Hitze anrösten, ab und zu wenden.
+		\step Zucker, Eier, Öl, Mehl, Backpulver und Vanillezucker in Bananenmasse einrühren.
+		\step Mandeln und nach Belieben Schokostückchen dem Teig hinzufügen.
 		\step Teig in eine eingefettete Cakeform geben.
-		\step Bei \unit[180]{°C} f"ur \unit[45]{min} backen.
+		\step Bei \unit[180]{°C} für \unit[45]{min} backen.
 	}
 \end{recipe}
