--- a/Sections/Dessert/brownies.tex
+++ b/Sections/Dessert/brownies.tex
@@ -23,17 +23,17 @@
 		\unit[220]{g} & Zucker \\
 		\unit[1]{Pack} & Vanillezucker \\
 		\unit[115]{g} & Mehl \\		
-		\unit[150]{g} & Waln"usse, gehackt \\
+		\unit[150]{g} & Walnüsse, gehackt \\
 	}
 	
 	\preparation
 	{
-		\step Butter und Schokolade zum schmelzen bringen und abk"uhlen lassen.
-		\step Eier schaumig schlagen, Zucker und Vanillezucker hinzuf"ugen und weiter schlagen.
-		\step Das ganze in die Schokoladen-Butter Masse einr"uhren.
+		\step Butter und Schokolade zum Schmelzen bringen und abkühlen lassen.
+		\step Eier schaumig schlagen, Zucker und Vanillezucker hinzufügen und weiter schlagen.
+		\step Das Ganze in die Schokoladen-Butter Masse einrühren.
 		\step Mehl unterheben.
-		\step Waln"usse hinzuf"ugen.
+		\step Walnüsse hinzufügen.
 		\step 25-30 Minuten Backen.
-		\step Abk"uhlen lassen und in Quadrate schneiden.
+		\step Abkühlen lassen und in Quadrate schneiden.
 	}	
 \end{recipe}
