--- a/Sections/Dessert/cheesecake_brownies.tex
+++ b/Sections/Dessert/cheesecake_brownies.tex
@@ -19,13 +19,13 @@
 		\unit[200]{g} & Zartbitter Schokolade \\
 		\unit[250]{g} & Butter \\
 		\unit[150]{g} & Zucker \\
-		2 Fl"aschchen & Vanillearoma \\
+		2 Fläschchen & Vanillearoma \\
 		3 & Eier \\
 		\unit[100]{g} & Mehl \\
 		1 Prise & Salz \\
 		\unit[30]{g} & Kakaopulver \\
 		\unit[50]{g} & Puderzucker (gesiebt) \\
-		\unit[300]{g} & Frischk"ase \\
+		\unit[300]{g} & Frischkäse \\
 		\unit[100]{g} & Mascarpone \\
 		\unit[100]{g} & (TK) Himbeeren
 	}
@@ -33,12 +33,12 @@
 	\preparation
 	{
 		\step Butter und Schokolade bei mittlerer Hitze schmelzen.
-		\step Zucker, 1 Fl"aschchen Vanillearoma, 2 Eier, Mehl, Salz und Kakopulver miteinander verr"uhren.
-		\step Geschmolzene Butter-Schokoladen Mischung hinzugeben und fertig r"uhren.
+		\step Zucker, 1 Fläschchen Vanillearoma, 2 Eier, Mehl, Salz und Kakaopulver miteinander verrühren.
+		\step Geschmolzene Butter-Schokoladen Mischung hinzugeben und fertig rühren.
 		\step Den Teig in gefettete Brownie Bleche geben und glatt streichen.
-		\step Frischk"ase, Mascarpone, Vanillearoma, Puderzucker und das Ei mit einem Schneebesen verr"uhren.
-		\step Cheesecakemasse auf den Brownie Teig geben. Mit einer Gabel marmorieren.
-		\step Himbeeren dar"uber verteilen.
-		\step Im vorgeheizten Ofen bei 180°C f"ur 25 Minuten backen. Danach abk"uhlen lassen und in Rechtecke schneiden.
+		\step Frischkäse, Mascarpone, Vanillearoma, Puderzucker und das Ei mit einem Schneebesen verrühren.
+		\step Cheesecake Masse auf den Brownie Teig geben. Mit einer Gabel marmorieren.
+		\step Himbeeren darüber verteilen.
+		\step Im vorgeheizten Ofen bei 180 °C für 25 Minuten backen. Danach abkühlen lassen und in Rechtecke schneiden.
 	}	
 \end{recipe}
