--- a/Sections/Dessert/choclate_cheesecake.tex
+++ b/Sections/Dessert/choclate_cheesecake.tex
@@ -7,11 +7,11 @@
 	calory,
 	source
 	]
-	{Choclate Cheesecake mit Oreo-Boden}
+	{Chocolate Cheesecake mit Oreo-Boden}
 	
 	\graph
 	{
-		small=pictures/choclate_cheesecake/choclate_cheesecake
+		small=pictures/choclate_cheesecake/choclate_cheesecake.jpg
 	}
 	
 	\ingredients
@@ -20,13 +20,13 @@
 		\unit 30 & Oreos\\
 		\unit[70]{g} & Butter\\
 		\multicolumn{2}{c}{}\\
-		\multicolumn{2}{c}{\textbf{F"ullung}}\\
+		\multicolumn{2}{c}{\textbf{Füllung}}\\
 		\unit 4 & Eier \\
 		\unit[900]{g} & Mascarpone \\
 		\unit[150]{g} & Puderzucker \\
 		\unit[3]{EL} & Kakao \\
 		\unit[300]{g} & Schokolade \\
-		\unit[1]{P"ackchen} & Vanillezucker \\
+		\unit[1]{Päckchen} & Vanillezucker \\
 		\multicolumn{2}{c}{}\\
 		\multicolumn{2}{c}{\textbf{Glasur}}\\
 		\unit[200]{ml} & Rahm \\
@@ -37,16 +37,16 @@
 	\preparation
 	{
 		\step \textbf{Tortenboden}\\
-		Den Ofen auf \unit[175]{°C} vorheizen. Die Oreos fein zerkr"umeln. Parallel die Butter schmelzen lassen (am besten in Pfanne auf kleiner Stufe). Sobald die Kekse zerkleinert sind, die geschmolzene Butter dazugeben und gut vermischen. Das ganze in eine gefettete Springform geben und fest andr"ucken. Nach \unit[8-10]{min} herausnehmen und ausk"uhlen lassen.
-		\step \textbf{F"ullung} \\
-		Die Schokolade schmelzen. Parallel dazu die Mascarpone in eine Sch"ussel geben und glatt r"uhren. Puderzucker, Vanillezucker und Kakao hinzugeben und danach die Eier nach und nach in die Masse r"uhren. Schokolade in die Masse geben und gut verr"uhren. Das ganze dann auf den Tortenboden geben und bei 175 Grad f"ur eine Stunde backen. Den Kuchen aus dem Ofen nehmen und etwas abk"uhlen lassen. Danach f"ur 8 Stunden im K"uhlschrank abk"uhlen lassen.
+		Den Ofen auf \unit[175]{°C} vorheizen. Die Oreos fein zerkrümeln. Parallel die Butter schmelzen lassen (am besten in Pfanne auf kleiner Stufe). Sobald die Kekse zerkleinert sind, die geschmolzene Butter dazugeben und gut vermischen. Das Ganze in eine gefettete Springform geben und fest andrücken. Nach \unit[8-10]{min} herausnehmen und auskühlen lassen.
+		\step \textbf{Füllung} \\
+		Die Schokolade schmelzen. Parallel dazu die Mascarpone in eine Schüssel geben und glatt rühren. Puderzucker, Vanillezucker und Kakao hinzugeben und danach die Eier nach und nach in die Masse rühren. Schokolade in die Masse geben und gut verrühren. Das ganze dann auf den Tortenboden geben und bei 175 Grad für eine Stunde backen. Den Kuchen aus dem Ofen nehmen und etwas abkühlen lassen. Danach für 8 Stunden im Kühlschrank abkühlen lassen.
 		\step \textbf{Glasur}\\
-		Sahne kurz aufkochen. Dann die Schokolade und den Zucker hinzugeben und 2 Minuten ruhen lassen. Danach solange verr"uhren bis sich alles miteinander verbunden hat. \\
-		Sobald die Glasur etwas abgek"uhlt ist kann man Sie auf den Cheesecake geben und diesen nochmals f"ur 1-2 Stunden in den K"uhlschrank stellen.
+		Sahne kurz aufkochen. Dann die Schokolade und den Zucker hinzugeben und 2 Minuten ruhen lassen. Danach solange verrühren bis sich alles miteinander verbunden hat. \\
+		Sobald die Glasur etwas abgekühlt ist, kann man Sie auf den Cheesecake geben und diesen nochmals für 1-2 Stunden in den Kühlschrank stellen.
 	}
 	
 	\hint
 	{
-		Statt 900g Marscarpone kann auch ein Teil Frischk"ase verwendet werden.
+		Statt 900g Mascarpone kann auch ein Teil Frischkäse verwendet werden.
 	}
 \end{recipe}
