--- a/Sections/Dessert/cookies.tex
+++ b/Sections/Dessert/cookies.tex
@@ -11,7 +11,7 @@
 	
 	\graph
 	{
-		big=pictures/cookies/cookies
+		big=pictures/cookies/cookies.jpg
 	}
 	
 	\ingredients
@@ -19,22 +19,22 @@
 		\unit[250]{g} & Butter \\
 		\unit[200]{g} & Rohrzucker \\
 		\unit[175]{g} & Zucker \\
-		\unit[1]{TL} & Vanille Aroma (1/2 Fl"aschchen) \\
+		\unit[1]{TL} & Vanille Aroma (1/2 Fläschchen) \\
 		\unit[375]{g} & Mehl \\		
 		2 & Eier \\
 		\unit[2]{TL} & Backpulver \\
 		\unit[300]{g} & Schokolade gehackt \\
-		\unit[200]{g} & N"usse gehackt \\
+		\unit[200]{g} & Nüsse gehackt \\
 	}
 	
 	\preparation
 	{
-		\step Butter mit Zucker cremig schlagen
-		\step Vanillearoma und Eier darunter r"uhren
-		\step In separater Sch"ussel Mehl und Backpulver mischen und in die Buttermasse einr"uhren
-		\step Schokost"ucke und N"usse unterheben
-		\step Teig mit einem Essl"offel auf ein mit Backpapier ausgelegtes Blech verteilen
-		\step 12 Minuten Backen (f"ur krosse Cookies 15 Minuten)
-		\step 5 Minuten auf Blech ruhen lassen, dann auf Kuchengitten ausk"uhlen lassen
+		\step Butter mit Zucker cremig schlagen.
+		\step Vanillearoma und Eier darunter rühren.
+		\step In separater Schüssel Mehl und Backpulver mischen und in die Buttermasse einrühren.
+		\step Schokoladenstücke und Nüsse unterheben.
+		\step Teig mit einem Esslöffel auf ein mit Backpapier ausgelegtes Blech verteilen.
+		\step 12 Minuten Backen (für krosse Cookies 15 Minuten).
+		\step 5 Minuten auf Blech ruhen lassen, dann auf Kuchengitter auskühlen lassen.
 	}
 \end{recipe}
