--- a/Sections/Dessert/guinnesscake.tex
+++ b/Sections/Dessert/guinnesscake.tex
@@ -21,13 +21,13 @@
 		\unit[75]{g} & Kakao \\
 		\unit[50]{g} & Zartbitterschokolade \\		
 		\unit[300]{g} & brauner Zucker \\
-		\unit[200]{g} & Creme Fraiche \\
+		\unit[200]{g} & Crème fraîche \\
 		2 & Eier \\
 		\unit[1]{Flasche} & Vanillemark \\
 		\unit[1]{Pack} & Natron \\
 		Prise & Salz \\
 		\multicolumn{2}{c}{\textbf{Topping}}\\
-		\unit[300]{g} & Frischk"ase \\
+		\unit[300]{g} & Frischkäse \\
 		\unit[150]{g} & Puderzucker \\
 		\unit[125]{ml} & Rahm \\
 	}
@@ -37,13 +37,13 @@
 		\step Guinness in einen Topf geben, Butter hinzufügen und langsam schmelzen.
 		\step Parallel Schokolade schmelzen und dann zu Guinness und Butter geben.
 		\step Zucker und Kakao dazu geben und gut verrühren.
-		\step Eier in einer grossen Sch"ussel aufschlagen bis sie cremig hell sind. Creme Fraiche unterr"uhren und weiter schlagen.
-		\step Schoko-Guinness Masse nach und nach dazu geben, dabei st"andig r"uhren.
-		\step Zum Schluss Mehl, Salz udn Natron mischen und in den Teig sieben.
-		\step Nochmal gut verr"uhren und dann in eine Springform geben.
-		\step Bei \unit[175]{°}C im fen f"ur 60-70 Minuten backen.
-		\step Herausnehmen und komplett ausk"uhlen lassen.
-		\step F"ur das Topping: Sahne und Frischk"ase aufschlagen bis die Masse sehr fest ist. Dann nach und nach den Puderzucker dazugeben und weiterschlagen.
-		\step Masse auf den Kuchen geben und gleichm"assig verteilen.
+		\step Eier in einer grossen Schüssel aufschlagen bis sie cremig hell sind. Crème fraîche unterrühren und weiter schlagen.
+		\step Schoko-Guinness Masse nach und nach dazu geben, dabei ständig rühren.
+		\step Zum Schluss Mehl, Salz und Natron mischen und in den Teig sieben.
+		\step Nochmal gut verrühren und dann in eine Springform geben.
+		\step Bei \unit[175]{°}C im Ofen für 60-70 Minuten backen.
+		\step Herausnehmen und komplett auskühlen lassen.
+		\step Für das Topping: Sahne und Frischkäse aufschlagen bis die Masse sehr fest ist. Dann nach und nach den Puderzucker dazugeben und weiterschlagen.
+		\step Masse auf den Kuchen geben und gleichmässig verteilen.
 	}
 \end{recipe}
