--- a/Sections/Dessert/himbeer_quark.tex
+++ b/Sections/Dessert/himbeer_quark.tex
@@ -5,17 +5,17 @@
 	calory,
 	source
 	]
-	{Mascarpone - Himbeer - Quark}
+	{Mascarpone-Himbeer-Quark}
 	
 	\graph
 	{
-		big=pictures/mascarpone_himbeer_quark/himbeer_quark
+		big=pictures/mascarpone_himbeer_quark/himbeer_quark.png
 	}
 	
 	\ingredients
 	{
 		1 Becher & Schlagsahne, geschlagen \\
-		2 Becher & Naturejoghurt\\
+		2 Becher & Naturjoghurt\\
 		\unit[250]{g} & Mascarpone \\
 		\unit[500]{g} & Magerquark \\
 		\unit[500]{g} & Himbeeren (gefroren) \\
@@ -26,9 +26,9 @@
 	\preparation
 	{
 		\step Schlagsahne steif schlagen
-		\step Zucker, Quark, Joghurt und Mascarpone gut verr"uhren, bis der Zucker gut gel"ost ist
+		\step Zucker, Quark, Joghurt und Mascarpone gut verrühren, bis der Zucker gut gelöst ist
 		\step Geschlagene Sahne unterheben
-		\step Gefrorene Himbeeren und Quarkmasse abwechseln schichten.
+		\step Gefrorene Himbeeren und Quark Masse abwechseln schichten.
 		\step Mit geraspelter Schokolade bestreuen
 		\step Mindestens 3 Stunden ziehen lassen
 	}	
