--- a/Sections/Dessert/keylimepie.tex
+++ b/Sections/Dessert/keylimepie.tex
@@ -18,7 +18,7 @@
 	{
 		\unit[200]{g} & Butterkekse \\
 		\unit[120]{g} & Butter \\
-		\unit[4]{St"uck} & Limetten \\
+		\unit[4]{Stück} & Limetten \\
 		\unit[400]{g} & Kondensmilch \\		
 		3 & Eier \\
 		\unit[240]{ml} & Rahm \\
@@ -28,16 +28,16 @@
 	
 	\preparation
 	{
-		\step Kekse fein zerkr"umeln. In der Zwischenzeit die Butter schmelzen.
-		\step Kr"umel mit Butter vermischen und in Springform geben. Gut andr"ucken und f"ur 15 Minuten in den K"uhlschrank geben.
+		\step Kekse fein zerkrümeln. In der Zwischenzeit die Butter schmelzen.
+		\step Krümel mit Butter vermischen und in Springform geben. Gut andrücken und für 15 Minuten in den Kühlschrank geben.
 		\step Limetten gut waschen. Schale von einer Limette abreiben und dann alle Limetten auspressen.
-		\step Kondensmilch, 3 Eigelbe, Limettenschale und ca. 130ml des Limettensaftes gut verr"uhren. Die Mischung gut auf dem Keksboden vereteilen.
-		\step F"ur 15 Minuten in den 180°C heissen Ofen.
-		\step Den Kuchen auf Raumtemperatur abk"uhlen lassen und dann f"ur mindestens 4 Stunden im K"uhlschrank ziehen lassen.
-		\step F"ur das Topping den Rahmhalter mit dem Zucker mischen und den Rahm dazu geben. Dann steif schlagen und auf dem Pie verteilen.
+		\step Kondensmilch, 3 Eigelbe, Limettenschale und ca. 130ml des Limettensaftes gut verrühren. Die Mischung gut auf dem Keksboden verteilen.
+		\step Für 15 Minuten in den 180 °C heissen Ofen.
+		\step Den Kuchen auf Raumtemperatur abkühlen lassen und dann für mindestens 4 Stunden im Kühlschrank ziehen lassen.
+		\step Für das Topping den Rahmhalter mit dem Zucker mischen und den Rahm dazu geben. Dann steif schlagen und auf dem Pie verteilen.
 	}
 	\hint
 	{
-		Beim Abreiben der Schale darauf achten nur die obere gr"une Schicht zu erwischen. Die untere weisse Schicht ist sehr bitter.
+		Beim Abreiben der Schale darauf achten nur die obere grüne Schicht zu erwischen. Die untere weisse Schicht ist sehr bitter.
 	}
 \end{recipe}
