--- a/Sections/Dessert/knusperbananenkuchen.tex
+++ b/Sections/Dessert/knusperbananenkuchen.tex
@@ -20,26 +20,26 @@
 		\unit[150]{g} & Zucker \\
 		\unit[1]{Prise} & Salz \\
 		4 & frische Eier \\
-		2 & refie Bananen (ca. 300g) \\
+		2 & reife Bananen (ca. 300g) \\
 		\unit[3]{EL} & Zitronensaft \\		
 		\unit[175]{g} & Weissmehl \\
-		\unit[250]{g} & Knusperm"usli \\
+		\unit[250]{g} & Knuspermüsli \\
 		\unit[1]{EL} & Zucker \\
 		\unit[1]{TL} & Backpulver \\
-		einige \\ Butterfl"ockli \\
+		einige \\ Butterflöckli \\
 		wenig & Puderzucker \\
 	}
 	
 	\preparation
 	{
-		\step Butter, Zucker und Salz in einer Sch"ussel verr"uhren.
-		\step Ein Ei nach dem anderen darunterr"uhren bis die Masse hell ist.
-		\step Bananen mit Zitronensaft zerdr"ucken und unter die Masse r"uhren.
-		\step Mehl, Backpulver und 150g des Knusperm"ueslis daruntermischen.
-		\step In eine mit Backpapier ausgelegte Springform f"ullen.
-		\step Restliches M"uesli auf dem Teig verteilen.
-		\step Butterfl"ockli und Zucker dar"uber streuen.
+		\step Butter, Zucker und Salz in einer Schüssel verrühren.
+		\step Ein Ei nach dem anderen darunter rühren bis die Masse hell ist.
+		\step Bananen mit Zitronensaft zerdrücken und unter die Masse rühren.
+		\step Mehl, Backpulver und 150g des Knuspermüeslis darunter mischen.
+		\step In eine mit Backpapier ausgelegte Springform füllen.
+		\step Restliches Müesli auf dem Teig verteilen.
+		\step Butterflöckli und Zucker darüber streuen.
 		\step 40 Minuten in der Mitte des auf 180° vorgeheizten Ofens backen.
-		\step Herausnehmen, auf einem Gitter ausk"uhlen lassen. Puderzucker dar"uber geben.
+		\step Herausnehmen, auf einem Gitter auskühlen lassen. Puderzucker darüber geben.
 	}
 \end{recipe}
