--- a/Sections/Dessert/lemoncake.tex
+++ b/Sections/Dessert/lemoncake.tex
@@ -11,7 +11,7 @@
 	
 	\graph
 	{
-		small=pictures/zitronenkuchen/zitronenkuchen
+		small=pictures/zitronenkuchen/zitronenkuchen.png
 	}
 	
 	\ingredients
@@ -27,18 +27,18 @@
 	
 	\preparation
 	{
-		\step Butter in einer Sch"ussel gut verr"uhren bis sich Spitzchen bilden
-		\step Zucker und Salz gut darunter r"uhren
-		\step Nach und nach die Eier beif"ugen. Solange r"uhren bis die Masse heller wird
-		\step Abgeriebene Zitronenschale und \unit[1]{EL} Saft darunter r"uhren
-		\step Mehl und Backpulver unter mischen
+		\step Butter in einer Schüssel gut verrühren bis sich Spitzen bilden
+		\step Zucker und Salz gut darunter rühren
+		\step Nach und nach die Eier beifügen. Solange rühren bis die Masse heller wird
+		\step Abgeriebene Zitronenschale und \unit[1]{EL} Saft darunter rühren
+		\step Mehl und Backpulver untermischen
 		\step Masse in die gefettete Cakeform geben und im auf \unit[180]{°C} vorgeheizten Ofen \unit[40]{min} backen
-		\step Wenn der Kuchen fertig gebacken ist aus dem Ofen nehmen, \unit[10]{min} ausk"uhlen lassen und dann aus der Form nehmen
+		\step Wenn der Kuchen fertig gebacken ist aus dem Ofen nehmen, \unit[10]{min} auskühlen lassen und dann aus der Form nehmen
 	}
 	
 	\hint
 	{
-		Butter in kleine St"ucke schneiden bevor man sie verr"uhrt \\
-		Anstatt Zitronen k"onnen auch Orangen genommen werden
+		Butter in kleine Stücke schneiden bevor man sie verrührt \\
+		Anstatt Zitronen können auch Orangen genommen werden
 	}
 \end{recipe}
