--- a/Sections/Dessert/nutellaherzen.tex
+++ b/Sections/Dessert/nutellaherzen.tex
@@ -17,7 +17,7 @@
 	\ingredients
 	{
 		\unit[2]{EL} & warmes Wasser \\
-		\unit[1]{W"urfel} & Hefe \\
+		\unit[1]{Würfel} & Hefe \\
 		\unit[80]{g} & Zucker \\
 		1 & Eier \\
 		\unit[1]{TL} & Salz \\
@@ -29,15 +29,15 @@
 	
 	\preparation
 	{
-		\step Wasser mit Hefe und Zucker verr"uhren.
-		\step Ei, Salz, Mehl und Milch hinzuf"ugen.
-		\step Alles verr"uhren, anschliessend Butter zuf"ugen und 5-7 Minuten zu einem glatten Teig kneten.
-		\step Bei Bedarf noch etwas Mehl hinzuf"ugen, so dass ein glatter aber nicht klebender Teig entsteht.
-		\step Zu einer Kugel rollen, mit etwas Mehl bestreuen und in einer Sch"ussel 30-60 Minuten aufgehen lassen.
-		\step Teig halbieren und jede H"alfte auf etwa 20x40cm ausrollen.
+		\step Wasser mit Hefe und Zucker verrühren.
+		\step Ei, Salz, Mehl und Milch hinzufügen.
+		\step Alles verrühren, anschliessend Butter zufügen und 5-7 Minuten zu einem glatten Teig kneten.
+		\step Bei Bedarf noch etwas Mehl hinzufügen, sodass ein glatter aber nicht klebender Teig entsteht.
+		\step Zu einer Kugel rollen, mit etwas Mehl bestreuen und in einer Schüssel 30-60 Minuten aufgehen lassen.
+		\step Den Teig halbieren und jede Hälfte auf etwa 20x40 cm ausrollen.
 		\step Mit Nutella bestreichen.
-		\step Den Teig von beiden Seiten her aufrollen, so dass sich die Rollen in der Mitte fast ber"uhren.
+		\step Den Teig von beiden Seiten her aufrollen, sodass sich die Rollen in der Mitte fast berühren.
 		\step Ca. 2 cm dicke Scheiben schneiden und auf ein mit Backpapier belegtes Blech legen.
-		\step In den kalten Ofen schieben und bei 180°C f"ur 20 Minuten bei Ober- und Unterhitze backen.
+		\step In den kalten Ofen schieben und bei 180 °C für 20 Minuten bei Ober- und Unterhitze backen.
 	}	
 \end{recipe}
