--- a/Sections/Dessert/schoggimousse.tex
+++ b/Sections/Dessert/schoggimousse.tex
@@ -26,8 +26,8 @@
 		\step Eigelb mit Zucker schaumig schlagen
 		\step Eiweiss steif schlagen
 		\step Rahm steif schlagen
-		\step Schokolade schmelzen lassen, zu Zucker und Eigelb hinzuf"ugen und gut verr"uhren
-		\step Den Rahm dazugeben
-		\step Das Eiweiss darunter heben.
+		\step Schokolade schmelzen lassen, zu Zucker und Eigelb hinzufügen und gut verrühren
+		\step Rahm dazugeben
+		\step Eiweiss darunter heben.
 	}
 \end{recipe}
