--- a/Sections/Dessert/straciatella_mousse.tex
+++ b/Sections/Dessert/straciatella_mousse.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{Straciatella Mousse}
+	{Stracciatella Mousse}
 	
 	\graph
 	{
@@ -29,9 +29,9 @@
 	{
 		\step Eigelb und Zucker schaumig rühren, Mascarpone darunterrühren
 		\step Die Gelatine gut ausdrücken und mit einem Esslöffel Wasser bei milder Hitze auflösen
-		\step Die Mascarponemasse unter ständigem Rühren zur Gelatine geben, passieren und im Kühlschrank ansulzen lassen
+		\step Die Mascarpone Masse unter ständigem Rühren zur Gelatine geben, passieren und im Kühlschrank ansulzen lassen
 		\step Eiweiss steif schlagen, Zucker einrieseln lassen und weiterschlagen, bis die Masse glänzt
-		\step Rahm steif schlagen und unter Mascarponemasse ziehen
+		\step Rahm steif schlagen und unter Mascarpone Masse ziehen
 		\step Eiweiss zur Masse geben
 		\step Schokolade zerkleinern und unter die Masse mischen
 		\step Im Kühlschrank für 4-6 Stunden fest werden lassen
