--- a/Sections/Dessert/tiramisu.tex
+++ b/Sections/Dessert/tiramisu.tex
@@ -9,7 +9,7 @@
 	
 	\graph
 	{
-		big=pictures/tiramisu/tiramisu.PNG
+		big=pictures/tiramisu/tiramisu.png
 	}
 	
 	\ingredients
@@ -21,18 +21,18 @@
 		etwas & Amaretto \\
 		\unit[4]{Tassen} & Kaffee \\
 		etwas & Kaluha \\
-		\unit[250]{g} & Lo"ffelbiskuits \\
-		etwas & Kakopulver \\
+		\unit[250]{g} & Löffelbiskuits \\
+		etwas & Kakaopulver \\
 	}
 	
 	\preparation
 	{
-		\step Eigelb, Puderzucker, Mascarpone und etwas Amaretto cremig r"uhren
+		\step Eigelb, Puderzucker, Mascarpone und etwas Amaretto cremig rühren
 		\step Eiweiss steif schlagen und vorsichtig unterheben
 		\step Kaffee mit etwas Kaluha mischen
-		\step Lo"ffelbiskuits im Kaffee tr"anken und auf Boden der Form verteilen
-		\step Danach eine Schicht Mascarponecreme, eine weitere Schicht Biskuits und das Ganze mit Creme zudecken
+		\step Löffelbiskuits im Kaffee tränken und auf Boden der Form verteilen
+		\step Danach eine Schicht Mascarpone Creme, eine weitere Schicht Biskuits und das Ganze mit Creme zudecken
 		\step Dick mit Kakaopulver bestreuen
-		\step Mindestens 2h k"uhl stellen
+		\step Mindestens 2h kühl stellen
 	}
 \end{recipe}
