--- a/Sections/Dessert/zimtschnecken.tex
+++ b/Sections/Dessert/zimtschnecken.tex
@@ -35,7 +35,7 @@
 	
 	\preparation
 	{
-		\step Mehl und alle Zuaten bis und mit Hefe in einer Schüssel mischen
+		\step Mehl und alle Zutaten bis und mit Hefe in einer Schüssel mischen
 		\step Butter und Milch beigeben, mischen, zu einem weichen, glatten Teig kneten
 		\step Zugedeckt bei Raumtemperatur ca. 2 Std. aufs Doppelte aufgehen lassen
 		\step Für die Füllung, Butter, Zucker, Zimt und Mehl verrühren
