--- a/Sections/Mains/aelplermagronen.tex
+++ b/Sections/Mains/aelplermagronen.tex
@@ -5,7 +5,7 @@
 	calory,
 	source
 	]
-	{"Alpermagronen}
+	{Älpermagronen}
 	\graph
 	{
 		small=pictures/aelplermagronen/aelplermagronen.jpg
@@ -15,23 +15,23 @@
 	{
 		2 & Knoblauchzehen\\
 		\unit[400]{g} & festkochende Kartoffeln \\
-		\unit[150]{g} & Speckw"urfel \\
+		\unit[150]{g} & Speckwürfel \\
 		\unit[5]{dl} & Wasser \\
 		\unit[2]{dl} & Halbrahm \\
 		\unit[250]{g} & Teigwaren \\
-		\unit[60]{g} & Reibk"ase \\
+		\unit[60]{g} & Reibkäse \\
 		& Salz und Pfeffer \\
-		& R"ostzwiebeln \\
+		& Röstzwiebeln \\
 		& Apfelmus \\
 	}
 	
 	\preparation
 	{
-		\step Knoblauch in Scheiben, Kartoffeln in W"urfel schneiden.
+		\step Knoblauch in Scheiben, Kartoffeln in Würfel schneiden.
 		\step Speck und Knoblauch in Bratpfanne anbraten.
 		\step Wasser und Rahm aufkochen.
-		\step Kartoffeln und Teigwaren dazu geben und ca. 10 Minuten kochen, bis die Fl"ussigkeit aufgesogen ist.
-		\step K"ase darunter mischen und w"urzen, Speck und Knoblauch dazu geben.
-		\step Mit Apfelmus und R"ostzwiebeln anrichten.
+		\step Kartoffeln und Teigwaren dazu geben und ca. 10 Minuten kochen, bis die Flüssigkeit aufgesogen ist.
+		\step Käse darunter mischen und würzen, Speck und Knoblauch dazu geben.
+		\step Mit Apfelmus und Röstzwiebeln anrichten.
 	}
 \end{recipe}
