--- a/Sections/Mains/baked_mac_and_cheese.tex
+++ b/Sections/Mains/baked_mac_and_cheese.tex
@@ -27,11 +27,11 @@
 	
 	\preparation
 	{
-		\step Die Nudeln nach Packungsanweisung al dente kochen.
-		\step W"ahrenddessen die Butter in einer Pfanne schmelzen.
-		\step Das Mehl hineinr"uhren, nach und nach unter R"uhren die Milch hinzuf"ugen. 4-5 Minuten k"ocheln lassen bis die Sauce dicker wird.
-		\step Den K"ase hinzuf"ugen und r"uhren bis er geschmolzen ist. Mit Salz, Senf und Cayennepfeffer abschmecken.
+		\step Die Nudeln nach Packungsanleitung al dente kochen.
+		\step Währenddessen die Butter in einer Pfanne schmelzen.
+		\step Das Mehl einrühren, nach und nach unter Rühren die Milch hinzufügen. 4-5 Minuten köcheln lassen bis die Sauce dicker wird.
+		\step Den Käse hinzufügen und rühren bis er geschmolzen ist. Mit Salz, Senf und Cayennepfeffer abschmecken.
 		\step Die Nudeln mit der Sauce mischen und alles in eine gefettete Auflaufform geben.
-		\step Mit dem Paniermehl bestreuen, mit Butterfl"ockchen besetzen und den Auflauf 30 Minuten im Ofen backen.
+		\step Mit dem Paniermehl bestreuen, mit Butterflöckchen besetzen und den Auflauf 30 Minuten im Ofen backen.
 	}
 \end{recipe}
