--- a/Sections/Mains/bakedbeans.tex
+++ b/Sections/Mains/bakedbeans.tex
@@ -20,21 +20,21 @@
 		2 & Knoblauchzehen \\
 		\unit[0.5]{dl} & Ahornsirup \\
 		\unit[0.5]{dl} & Ketchup \\
-		\unit[1]{TL} & s"usser Senf \\
-		\unit[1/4]{TL} & Ingwerpulver \\
+		\unit[1]{TL} & süsser Senf \\
+		\unit[1/4]{TL} & Ingwer Pulver \\
 		\unit[1]{EL} & brauner Zucker \\
 		& Salz, Pfeffer \\
 	}
 	
 	\preparation
 	{
-		\step Bohnen "uber Nacht in Wasser einweichen lassen. Wasser abgiessen und Bohnen absp"ulen.
+		\step Bohnen über Nacht in Wasser einweichen lassen. Wasser abgiessen und Bohnen abspülen.
 		\step Ca. 1 Stunde bei mässiger Hitze kochen.
-		\step Speck w"urfeln und in einer Pfanne auslassen, Knoblauch dazugeben.
+		\step Den Speck würfeln und in einer Pfanne auslassen, Knoblauch dazugeben.
 		\step Bohnen in feuerfeste Form geben, Speck, Knoblauch und alle andere Zutaten ausser Salz dazugeben und gut mischen.
 		\step Falls es mehr Sauce braucht, etwas Wasser dazugeben.
-		\step Form abdecken und f"ur 30 Minuten in den Ofen.
-		\step Deckel entfernen, eventuell noch etwas Wasser hinzuf"ugen. Weitere 30-40 Minuten garen lassen.
+		\step Die Form abdecken und für 30 Minuten in den Ofen.
+		\step Deckel entfernen, eventuell noch etwas Wasser hinzufügen. Weitere 30-40 Minuten garen lassen.
 		\step Abschmecken und salzen. Heiss servieren.
 	}
 \end{recipe}
