--- a/Sections/Mains/beefpie.tex
+++ b/Sections/Mains/beefpie.tex
@@ -21,28 +21,28 @@
 		wenig & Pfeffer \\
 		\unit[1-2]{Zehen} & Knoblauch \\
 		1 & Karotte \\
-		\unit[1]{Pack} & Speckw"urfeli \\
+		\unit[1]{Pack} & Speckwürfeli \\
 		\unit[2]{dl} & Fleischbouillon \\
 		\unit[2]{dl} & Vollrahm \\
 		& Schnittlauch \\
-		1-2 & Bl"atterteig (32cm) \\
+		1-2 & Blätterteig (32 cm) \\
 		1 & Ei \\
 	}
 	
 	\preparation
 	{
-		\step Fleisch ca. 3 Minuten anbraten, mit wenig Mehl best"auben, herausnehmen und mit Salz und Pfeffer w"urzen.
+		\step Fleisch ca. 3 Minuten anbraten, mit wenig Mehl bestäuben, herausnehmen und mit Salz und Pfeffer würzen.
 		\step Speck, gehackte Karotte und Knoblauch anbraten.
 		\step Bouillon und Rahm dazugiessen und aufkochen.
 		\step Fleisch dazugeben und bei kleiner Hitze ca. 50-60 Minuten zugedeckt schmoren.
-		\step In der zwischenzeit Bl"atterteig einstechen und in Form geben.
-		\step Wenn sich die Fl"ussigkeit gen"ugend reduziert hat Schnittlauch dazu geben und auf den Bl"atterteig geben.
-		\step Restlichen Bl"atterteig einstechen und auf Fleisch geben. Mit innerem Teig fest zusammendr"ucken und grossz"ugig mit Ei bestreichen.
-		\step F"ur 20 Minuten in den Ofen.
+		\step In der Zwischenzeit Blätterteig einstechen und in Form geben.
+		\step Sobald sich die Flüssigkeit genügend reduziert hat Schnittlauch dazu geben und auf den Blätterteig geben.
+		\step Restlichen Blätterteig einstechen und auf Fleisch geben. Mit innerem Teig fest zusammendrücken und grosszügig mit Ei bestreichen.
+		\step Für 20 Minuten in den Ofen.
 	}
 	
 	\hint
 	{
-		Man kann auch nur einen Bl"atterteig zum abdecken verwenden und das Fleisch direkt in die Form geben.
+		Man kann auch nur einen Blätterteig zum Abdecken verwenden und das Fleisch direkt in die Form geben.
 	}
 \end{recipe}
