--- a/Sections/Mains/bolognesegratin.tex
+++ b/Sections/Mains/bolognesegratin.tex
@@ -17,21 +17,21 @@
 	{
 		\unit[250-300]{g} & Teigwaren \\
 		\unit[500]{g} & Hackfleisch \\
-		\unit[200]{g} & R"uebli, gerieben \\
+		\unit[200]{g} & Rüebli, gerieben \\
 		1 & Knoblauchzehe \\
-		\unit[100]{g} & Tomatenp"ure \\
+		\unit[100]{g} & Tomatenpüree \\
 		\unit[1]{dl} & Rahm \\
 		& Salz, Pfeffer, Paprika \\
-		& Reibk"ase \\
+		& Reibkäse \\
 	}
 	
 	\preparation
 	{
 		\step Teigwaren in reichlich Salzwasser al dente kochen, abgiessen. In die ausgebutterte Gratinform geben.
-		\step Fleisch in der heissen Bratbutter portionenweise rundum kr"aftig anbraten, beiseite stellen.
-		\step Gem"use, Zwiebel und Knoblauch in derselben Pfanne and"ampfen. Tomatenp"uree und Fleisch dazugeben, mischen. Mit Bouillon und Rahm abl"oschen, aufkochen, w"urzen.
+		\step Fleisch in der heissen Bratbutter portionsweise rundum kräftig anbraten, beiseite stellen.
+		\step Gemüse, Zwiebel und Knoblauch in derselben Pfanne andämpfen. Tomatenpüree und Fleisch dazugeben, mischen. Mit Bouillon und Rahm ablöschen, aufkochen, würzen.
 		\step Zugedeckt bei kleiner Hitze 25-30 Minuten schmoren.
-		\step Auf die Teigwaren in der Gratinform geben, nach Belieben mischen, flach streichen. Mit K"ase bestreuen.
-		\step In der Mitte des auf 220°C vorgeheizten Ofens 15-20 Minuten gratinieren.
+		\step Auf die Teigwaren in der Gratinform geben, nach Belieben mischen, flach streichen. Mit Käse bestreuen.
+		\step In der Mitte des auf 220 °C vorgeheizten Ofens 15-20 Minuten gratinieren.
 	}
 \end{recipe}
