--- a/Sections/Mains/cheese_bacon_potatoes.tex
+++ b/Sections/Mains/cheese_bacon_potatoes.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{K"ase-Speck Folienkartoffeln}
+	{Käse-Speck Folienkartoffeln}
 	\graph
 	{
 		big=pictures/folienkartoffeln/folienkartoffeln.png
@@ -16,21 +16,21 @@
 	\ingredients
 	{
 		4 & grosse Kartoffeln (mehligkochend) \\
-		\unit[100]{g} & Greyerzer K"ase (in Scheiben geschnitten) \\
+		\unit[100]{g} & Greyerzer Käse (in Scheiben geschnitten) \\
 		10 & Tranchen Bratspeck (quer halbiert) \\
-		\unit[1]{TL} & Oliven"ol \\
+		\unit[1]{TL} & Olivenöl \\
 		\unit[200]{g} & Magerquark \\
 		\unit[5]{g} & Schnittlauch \\
-		& Diverse Kr"auter/Gew"urze \\
+		& Diverse Kräuter/Gewürze \\
 		1/2 & Zitrone (nur Saft) \\
 	}
 	
 	\preparation
 	{
-		\step \textbf{Kartoffeln}
-		\step Kartoffeln in F"acher schneiden.
-		\step Abwechslungsweise K"ase und Speck in F"acher legen.
-		\step Mi "Ol betr"aufeln und mit Kr"autern w"urzen.
+		\step \textbf{Folienkartoffeln}
+		\step Kartoffeln in Fächer schneiden.
+		\step Abwechslungsweise Käse und Speck in Fächer legen.
+		\step Mit Öl beträufeln und mit Kräutern würzen.
 		\step Kartoffeln gut in Alufolie einwickeln
 		\step ca. 1 Stunde bei \unit[170]{°C} garen.
 		\step \textbf{Sauce}
