--- a/Sections/Mains/chicken_satay_skewer.tex
+++ b/Sections/Mains/chicken_satay_skewer.tex
@@ -15,28 +15,28 @@
 	
 	\ingredients
 	{
-		4 & Pouletbr"ustchen \\
-		& Holzspiesschen \\
+		4 & Pouletbrüstchen \\
+		& Holzspiesse \\
 		1 Prise & Salz \\
 		4 Portionen & Reis \\
 		& \textbf{Marinade} \\
 		\unit[2]{EL} & Sojasauce \\
-		\unit[1]{EL} & Erdnuss"ol \\
+		\unit[1]{EL} & Erdnussöl \\
 		\unit[1]{EL} & Erdnussbutter \\
 		\unit[1]{EL} & Zitronensaft \\
 		&\textbf{Erdnusssauce} \\
 		\unit[2]{dl} & Kokosmilch \\
 		\unit[3-4]{EL} & Erdnussbutter \\
-		\unit[2]{EL} & Sojasacue \\
+		\unit[2]{EL} & Sojasauce \\
 	}
 	
 	\preparation
 	{
-		\step Pouletbr"ustli zwischen Klarsichtfolie legen, mit dem Boden einer Pfanne sorgf"altig ca. \unit[5]{mm} dick flach klopfen. Pouletbr"ustli l"angs vierteln, wellenf"ormig auf die Spiesse stecken.
-		\step \textbf{Marinade}: F"ur die Marinade Sojasauce und alle Zutaten gut verr"uhren.
-		\step Spiessli damit bestreichen, zugedeckt im K"uhlschrank ca. 2 Std. marinieren.
-		\step \textbf{Erdnusssauce}: Kokosmilch und alle Zutaten p"urieren, in einer kleinen Pfanne aufkochen, Hitze reduzieren, unter R"uhren ca. 10 Min. k"ocheln.
-		\step Spiesschen portionenweise beidseitig einige Minuten braten, etwas salzen.
+		\step Pouletbrüstli zwischen Klarsichtfolie legen, mit dem Boden einer Pfanne sorgfältig ca. \unit[5]{mm} dick flach klopfen. Pouletbrüstli längs vierteln, wellenförmig auf die Spiesse stecken.
+		\step \textbf{Marinade}: Für die Marinade Sojasauce und alle Zutaten gut verrühren.
+		\step Spiesse damit bestreichen, zugedeckt im Kühlschrank ca. 2 Std. marinieren.
+		\step \textbf{Erdnusssauce}: Kokosmilch und alle Zutaten pürieren, in einer kleinen Pfanne aufkochen, Hitze reduzieren, unter Rühren ca. 10 Min. köcheln.
+		\step Spiesse portionsweise beidseitig einige Minuten braten, etwas salzen.
 		\step Spiesse zusammen mit einer Portion Reis und der Erdnusssauce servieren.
 	}	
 \end{recipe}
