--- a/Sections/Mains/enchilada.tex
+++ b/Sections/Mains/enchilada.tex
@@ -21,7 +21,7 @@
 		1 & Paprika \\
 		1 & Chilischote \\
 		\unit[500-600]{g} & passierte Tomaten \\
-		\unit[4]{EL} & Creme Fraiche \\
+		\unit[4]{EL} & Crème fraîche \\
 		& Reibkäse \\
 		& Salz, Pfeffer, Paprikapulver \\
 		& Basilikum \\
@@ -29,14 +29,14 @@
 	
 	\preparation
 	{
-		\step Poulet klein schneiden, mit Salz und Pfeffer w"urzen und in "Ol anbraten.
+		\step Poulet klein schneiden, mit Salz und Pfeffer würzen und in Öl anbraten.
 		\step Paprika, Knoblauch und Chilischote klein schneiden.
-		\step Poulet aus der Pfanne nehmen und beiseite stellen und das Gem"use in der Pfanne anbraten.
+		\step Poulet aus der Pfanne nehmen und beiseite stellen und das Gemüse in der Pfanne anbraten.
 		\step In der Zwischenzeit das Poulet von Hand auseinander zupfen.
-		\step Dann das Fleisch wieder in die Pfanne geben, kurz verr"uhren und 100-200g passierte Tomaten dazu geben und w"ahrend 10 Minuten k"ocheln lassen.
-		\step F"ur die Sauce eine Knoblauchzehe klein schneiden und in etwas "Ol anbraten. 400g passierte Tomaten dazu geben und 5 Minuten k"ocheln lassen.
+		\step Dann das Fleisch wieder in die Pfanne geben, kurz verrühren und 100-200g passierte Tomaten dazu geben und während 10 Minuten köcheln lassen.
+		\step Für die Sauce eine Knoblauchzehe klein schneiden und in etwas Öl anbraten. 400g passierte Tomaten dazu geben und 5 Minuten köcheln lassen.
 		\step Sauce danach mit etwas Salz, Pfeffer und Basilikum abschmecken.
-		\step Zum Fleisch kann nach 10 Minuten die Creme Fraiche hinzugegeben werden. Danach mit Salz, Pfeffer und Paprikapulver abschmecken.
-		\step F"ullung auf die Tortillas geben, zusammenrollen und in eine Gratinform legen. Die Sauce dar"uber geben und das ganze mit Reibk"ase "uberdecken. Bei 180 Grad f"ur 20 Minuten "uberbacken.
+		\step Zum Fleisch kann nach 10 Minuten die Crème fraîche hinzugegeben werden. Danach mit Salz, Pfeffer und Paprikapulver abschmecken.
+		\step Füllung auf die Tortillas geben, zusammenrollen und in eine Gratinform legen. Die Sauce darüber geben und das ganze mit Reibkäse überdecken. Bei 180 Grad für 20 Minuten überbacken.
 	}
 \end{recipe}
