--- a/Sections/Mains/fotzelschnitten.tex
+++ b/Sections/Mains/fotzelschnitten.tex
@@ -10,7 +10,7 @@
 	{Fotzelschnitten}
 	\graph
 	{
-		small=pictures/fotzelschnitten/fotzelschnitten
+		small=pictures/fotzelschnitten/fotzelschnitten.jpg
 	}
 	
 	\ingredients
@@ -28,10 +28,10 @@
 	{
 		\step Eier verquirlen, Salz und Rahm dazugeben
 		\step Brot in ca. \unit[1.5]{cm} dicke Scheiben schneiden und auf einem Blech auslegen
-		\step Brotscheiben mit etwas Milch betr"aufeln
+		\step Brotscheiben mit etwas Milch beträufeln
 		\step Etwas Butter in einer Bratpfanne schmelzen
 		\step Brotscheiben durch die Eier-Rahm-Mischung ziehen
-		\step Portionenweise in der Butter bei mittlerer Hitze beidseitig braten
+		\step Portionen Weise in der Butter bei mittlerer Hitze beidseitig braten
 		\step Zimt und Zucker mischen und die Fotzelschnitten darin wenden
 	}
 \end{recipe}
