--- a/Sections/Mains/hackfleischpfanne.tex
+++ b/Sections/Mains/hackfleischpfanne.tex
@@ -17,7 +17,7 @@
 	{
 		\unit[500]{g} & Hackfleisch \\
 		4 & grosse Kartoffeln \\
-		\unit[3]{dl} & Creme Fraiche \\
+		\unit[3]{dl} & Crème fraîche \\
 		2 & Karotten \\
 		4 & Knoblauchzehen \\
 		\unit[6]{EL} & Worcestersauce \\
@@ -25,17 +25,17 @@
 		& Rosmarin \\
 		& Petersilie \\
 		& Thymian \\
-		& Oliven"ol \\
+		& Olivenöl \\
 	}
 	
 	\preparation
 	{
-		\step Kartoffeln waschen, von schadhaften Stellen befreien und mit einem Messer etwas einstechen. In eine grosse, Mikrowellentaugliche Sch"ussel stellen, doppelt mit Frischhaltefolie abdecken und bei 600-800 Watt ca. 14-16 Minuten weich garen.
-		\step Hackfleisch in einer Pfanne zerteilen. Mit etwas Salz und Pfeffer w"urzen und Oliven"ol dazu geben. Etwas Thymian dazugeben und unter R"uhren anbraten.
+		\step Kartoffeln waschen, von schadhaften Stellen befreien und mit einem Messer etwas einstechen. In eine grosse, Mikrowellen taugliche Schüssel stellen, doppelt mit Frischhaltefolie abdecken und bei 600-800 Watt ca. 14-16 Minuten weich garen.
+		\step Hackfleisch in einer Pfanne zerteilen. Mit etwas Salz und Pfeffer würzen und Olivenöl dazu geben. Etwas Thymian dazugeben und unter Rühren anbraten.
 		\step Den Speck in kleine Streifen schneiden und in einer Pfanne etwas anbraten.
-		\step Die Karotten in kleine St"ucke schneiden.
-		\step Rosmarin, gepressten Knoblauch und Worcestersauce zum Fleisch geben. Gut verr"uhren und weitergaren, bis alles mit Sauce "ubergl"anzt ist. Dann die Karotten und den Speck dazu geben.
-		\step Sobald Kartoffeln gar sind mit Salz und Pfeffer w"urzen und etwas Oliven"ol "ubergiessen. Danach f"ur ca 5 Minuten in den Ofen bis sie goldgelb sind.
-		\step Etwas Petersilie "uber das Hackfleisch geben und verr"uhren. Die Kartoffeln aus dem Ofen nehmen und kreuzweise einschneiden. Mit Creme Fraiche und Petersilie servieren.
+		\step Die Karotten in kleine Stücke schneiden.
+		\step Rosmarin, gepressten Knoblauch und Worcestersauce zum Fleisch geben. Gut verrühren und weiter Garen, bis alles mit Sauce überglänzt ist. Dann die Karotten und den Speck dazu geben.
+		\step Sobald Kartoffeln gar sind mit Salz und Pfeffer würzen und etwas Olivenöl übergiessen. Danach für ca. 5 Minuten in den Ofen bis sie goldgelb sind.
+		\step Etwas Petersilie über das Hackfleisch geben und verrühren. Die Kartoffeln aus dem Ofen nehmen und kreuzweise einschneiden. Mit Crème fraîche und Petersilie servieren.
 	}	
 \end{recipe}
