--- a/Sections/Mains/indian_curry.tex
+++ b/Sections/Mains/indian_curry.tex
@@ -14,27 +14,27 @@
 	\ingredients
 	{
 		400-500g & Fleisch \\
-		& Chillipulver \\
+		& Chilipulver \\
 		& Indisches Schärfegewürz \\
 		& Kurkuma \\
 		3-4 & Kartoffeln \\
 		1 & Ingwerwurzel \\
 		1 & Zwiebel \\
-		2 & grüne Chillis \\
+		2 & grüne Chilis \\
 		4-6 & Knoblauchzehen \\
 		& Basmatireis \\
 	}
 	
 	\preparation
 	{
-		\step Fleisch in Würfel schneiden und in eine Pfanne legen
-		\step Ein Esslöffel Chillipulver, einen halben Löffel Schärfegewürz und einen Viertel Kurkuma über das Fleisch geben
+		\step Fleisch in Würfel schneiden und in eine Pfanne legen.
+		\step Einen Esslöffel Chilipulver, einen halben Löffel Schärfegewürz und einen Viertel Kurkuma über das Fleisch geben.
 		\step Etwas Öl und wenig Wasser dazu geben und Fleisch marinieren. Für ca. 45 Minuten ziehen lassen.
-		\step Ingwer schälen und klein schneiden, Chillis und Zwiebel klein schneiden, Knoblauchzehen schälen und etwas eindrücken und zum Fleisch geben
-		\step Etwas Wasser dazugeben und zum kochen bringen, danach die Hitze reduzieren und mit geschlossener Pfanne köcheln lassen.
-		\step Falls Poulet verwendet wurde, Kartoffeln klein schneiden und nach 20 Minuten mit etwas Salz zum Fleisch geben
-		\step Das Fleisch insgesamt 45-60 Minuten köcheln lassen
-		\step Etwas Basmatireis in einer separaten Pfanne zubereiten und zusammen servieren
+		\step Den Ingwer schälen und klein schneiden, Chilis und Zwiebel klein schneiden, Knoblauchzehen schälen und etwas eindrücken und zum Fleisch geben.
+		\step Etwas Wasser dazugeben und zum Kochen bringen, danach die Hitze reduzieren und mit geschlossener Pfanne köcheln lassen.
+		\step Falls Poulet verwendet wurde, Kartoffeln klein schneiden und nach 20 Minuten mit etwas Salz zum Fleisch geben.
+		\step Das Fleisch insgesamt 45-60 Minuten köcheln lassen.
+		\step Etwas Basmatireis in einer separaten Pfanne zubereiten und zusammen servieren.
 	}
 	
 	\hint{
