--- a/Sections/Mains/kartoffelgratin.tex
+++ b/Sections/Mains/kartoffelgratin.tex
@@ -20,20 +20,20 @@
 		\unit[3]{dl} & Milch \\
 		1-2 & Knoblauchzehen \\
 		& Salz, Pfeffer, Muskatnuss \\
-		\unit[100]{g} & Reibk"ase \\
+		\unit[100]{g} & Reibkäse \\
 	}
 	
 	\preparation
 	{
-		\step Kartoffeln waschen, sch"alen und in gleichm"assige Scheiben von 2-3 mm schneiden.
-		\step Karotffelscheiben in Gratinform schichten.
-		\step Milch, Rahm und nach belieben Knoblauch mischen und w"urzen.
-		\step Guss "uber die Kartoffeln giessen. Die Kartoffeln sollten dabei ganz bedeckt sein.
+		\step Kartoffeln waschen, schälen und in gleichmässige Scheiben von 2 bis 3 mm schneiden.
+		\step Kartoffelscheiben in Gratinform schichten.
+		\step Milch, Rahm und nach Belieben Knoblauch mischen und würzen.
+		\step Guss über die Kartoffeln giessen. Die Kartoffeln sollten dabei ganz bedeckt sein.
 		\step Auf der untersten Rille des auf \unit[180]{C} vorgeheizten Ofens ca. \unit[40-50]{min} backen.
-		\step K"ase auf Gratin verteilen, Ofentemperatur auf \unit[220]{C} erh"ohen und in der oberen H"alfte des Ofens ca. \unit[10]{min} "uberbacken.
+		\step Käse auf Gratin verteilen, Ofentemperatur auf \unit[220]{C} erhöhen und in der oberen Hälfte des Ofens ca. \unit[10]{min} überbacken.
 	}
 	\hint
 	{
-		Falls festkochende Kartoffeln verwendet werden, kann die Fl"ussigkeit um 1-2 dl verringert werden.
+		Falls festkochende Kartoffeln verwendet werden, kann die Flüssigkeit um 1-2 dl verringert werden.
 	}
 \end{recipe}
