--- a/Sections/Mains/kuerbistarte.tex
+++ b/Sections/Mains/kuerbistarte.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{K"urbis Tarte}
+	{Kürbis Tarte}
 	
 	\graph
 	{
@@ -20,27 +20,27 @@
 		\unit[150]{g} & kalte Butter \\
 		1 & Ei \\
 		\unit[2]{EL} & eiskaltes Wasser \\		
-		\unit[600]{g} & Hokkaidok"urbis \\
-		\unit[2]{EL} & Oliven"ol \\
+		\unit[600]{g} & Hokkaido Kürbis \\
+		\unit[2]{EL} & Olivenöl \\
 		\unit[750]{g} & Hackfleisch (gemischt) \\
 		\unit[2-3]{EL} & Tomatenmark \\
-		& Reibk"ase (Cheddar, Gouda) \\
+		& Reibkäse (Cheddar, Gouda) \\
 		& Salz, Pfeffer, Zucker \\
 		& Thymian, Rosmarin
 	}
 	
 	\preparation
 	{
-		\step F"ur den Teig Mehl, Butter in St"uckchen, Ei, 1 Prise Salz und Wasser verr"uhren, dann mit den H"anden zu einem glatten Teig verkneten.
-		\step Mit den Fingern in eine Tarteform dr"ucken.
-		\step K"urbis waschen, vierteln, entkernen und Fruchtfleisch w"urfeln.
-		\step "Ol erhitzen, Hack darin kr"umelig anbraten. Salz, Pfeffer und Kr"auter dazugeben.
-		\step Tomatenmark unterr"uhren und kurz anschwitzen. Mit Wasser abl"oschen. Mit Zucker abschmecken und kurz k"ocheln lassen.
-		\step Zuerst eine Schicht K"urbis auf den Boden legen, dann Hack dar"uber verteilen. Restlichen K"urbis dar"uber geben. Mit K"ase bestreuen.
-		\step Bei 200 Grad f"ur 25-30 Minuten backen.
+		\step Für den Teig Mehl, Butter in Stückchen, Ei, 1 Prise Salz und Wasser verrühren, dann mit den Händen zu einem glatten Teig verkneten.
+		\step Mit den Fingern in eine Tarteform drücken.
+		\step Kürbis waschen, vierteln, entkernen und Fruchtfleisch würfeln.
+		\step Öl erhitzen, Hack darin krümelig anbraten. Salz, Pfeffer und Kräuter dazugeben.
+		\step Das Tomatenmark unterrühren und kurz anschwitzen. Mit Wasser ablöschen. Mit Zucker abschmecken und kurz köcheln lassen.
+		\step Zuerst eine Schicht Kürbis auf den Boden legen, dann Hack darüber verteilen. Restlichen Kürbis darüber geben. Mit Käse bestreuen.
+		\step Bei 200 Grad für 25-30 Minuten backen.
 	}
 	\hint
 	{
-		Man kann den M"urbeteig auch fertig kaufen.
+		Man kann den Mürbeteig auch fertig kaufen.
 	}
 \end{recipe}
