--- a/Sections/Mains/nachos.tex
+++ b/Sections/Mains/nachos.tex
@@ -7,10 +7,10 @@
 	calory,
 	source
 	]
-	{Nachos mit Hackfleisch und K"ase}
+	{Nachos mit Hackfleisch und Käse}
 	\graph
 	{
-		big=pictures/nachos/nachos_large
+		big=pictures/nachos/nachos_large.jpg
 	}
 	
 	\ingredients
@@ -21,22 +21,22 @@
 		1 & Paprika \\
 		\unit[1]{Glas} & Salsa Sauce \\
 		\unit[300]{g} & Nachos \\
-		\unit[1]{Pack} & Reibk"ase \\
+		\unit[1]{Pack} & Reibkäse \\
 		\unit[1]{Pack} & Sauerrahm \\
 	}
 	
 	\preparation
 	{
-		\step Zwiebel, Peperoni und Paprika in kleine W"urfel schneiden.
-		\step Zwiebelst"ucke in Bratpfanne glasig anbraten.
-		\step Hackfleisch zugeben und \unit[5]{min} braten.
-		\step Peperoni und Paprika hinzugeben und weitere \unit[5]{min} d"unsten lassen.
-		\step Das ganze nach eigenem ermessen mit Salz, Pfeffer und je nach Gusto weiteren Gew"urzen verfeinern.
-		\step Die Salsa Sauce "uber das Fleischgemisch geben, gut verteilen und noch \unit[3-4]{min} kochen lassen.
+		\step Zwiebel, Peperoni und Paprika in kleine Würfel schneiden.
+		\step Zwiebelstücke in Bratpfanne glasig anbraten.
+		\step Das Hackfleisch zugeben und \unit[5]{min} braten.
+		\step Peperoni und Paprika hinzugeben und weitere \unit[5]{min} dünsten lassen.
+		\step Das ganze nach eigenem Ermessen mit Salz, Pfeffer und je nach Gusto weiteren Gewürzen verfeinern.
+		\step Die Salsa Sauce über das Fleischgemisch geben, gut verteilen und noch \unit[3-4]{min} kochen lassen.
 		\step In dieser Zeit die Nachos in einer Gratinform verteilen.
-		\step Das Fleisch "uber die Nachos geben und danach mit Reibk"ase "uberdecken
-		\step Das Ganze f"ur ca. \unit[5]{min} in den auf \unit[200]{°C} vorgeheizten Ofen schieben.
-		\step Sauerrahm klecksweise darauf geben und servieren
+		\step Das Fleisch über die Nachos geben und danach mit Reibkäse überdecken
+		\step Das Ganze für ca. \unit[5]{min} in den auf \unit[200]{°C} vorgeheizten Ofen schieben.
+		\step Sauerrahm klecks weise darauf geben und servieren
 	}
 	
 \end{recipe}
