--- a/Sections/Mains/pork_sweet_sour.tex
+++ b/Sections/Mains/pork_sweet_sour.tex
@@ -7,27 +7,27 @@
 	calory,
 	source
 	]
-	{Schweinefleisch S"uss-Sauer}
+	{Schweinefleisch Süss-Sauer}
 	
 	\graph
 	{
-		big=pictures/schweinefleisch_sweetsour/schweinefleisch_sweetsour
+		big=pictures/schweinefleisch_sweetsour/schweinefleisch_sweetsour.jpg
 	}
 	
 	\ingredients
 	{
-		\unit[160]{ml} & Pflanzen"ol \\
-		\unit[200-250]{g} & Schweinefleisch gew"urfelt\\
+		\unit[160]{ml} & Pflanzenöl \\
+		\unit[200-250]{g} & Schweinefleisch gewürfelt\\
 		1 & Zwiebel \\
 		1 & Paprika \\
-		\unit[225]{g} & Ananasst"ucke \\
+		\unit[225]{g} & Ananasstücke \\
 		1 & Karotte \\
 		\unit[25]{g} & Bambussprossen \\
 		& gekochter Reis \\
 		\\
 		\multicolumn{2}{c}{\textbf{Sauce}}\\
 		\unit[110]{g} & brauner Zucker \\
-		\unit[2]{EL} & Speisest"arke \\
+		\unit[2]{EL} & Speisestärke \\
 		\unit[120]{ml} & Weissweinessig \\
 		2 & Knoblauchzehen \\
 		\unit[4]{EL} & Tomatenmark \\
@@ -36,11 +36,11 @@
 	
 	\preparation
 	{
-		\step Pflanzen"ol in einem Wok stark erhitzen. Die Fleischst"ucke im Wok anbraten. Danach herausnehmen und auf einem Teller warm halten.
-		\step Falls noch nicht gemacht, Zwiebel, Karotte sowie Paprika und Bambussprossen in kleine St"ucke schneiden.
-		\step Zwiebel, Paprika, Ananasst"ucke, Karotte sowie Bambussprossen 1-2 Minuten im Wok braten. Danach auch wieder herausnehmen und zusammen mit dem Fleisch warm halten.
-		\step Alle Zutaten f"ur die Sauce vermengen und gut r"uhren. Danach im Wok aufkochen bis die Masse klar und eingedickt ist.
-		\step Dann das Fleisch und Gem"use der Sauce hinzuf"ugen und noch \unit[1-2]{min} kochen.
+		\step Pflanzenöl in einem Wok stark erhitzen. Die Fleischstücke im Wok anbraten. Danach herausnehmen und auf einem Teller warm halten.
+		\step Falls noch nicht gemacht, Zwiebel, Karotte sowie Paprika und Bambussprossen in kleine Stücke schneiden.
+		\step Zwiebel, Paprika, Ananasstücke, Karotte sowie Bambussprossen 1-2 Minuten im Wok braten. Danach auch wieder herausnehmen und zusammen mit dem Fleisch warm halten.
+		\step Alle Zutaten für die Sauce vermengen und gut rühren. Danach im Wok aufkochen bis die Masse klar und eingedickt ist.
+		\step Dann das Fleisch und Gemüse der Sauce hinzufügen und noch \unit[1-2]{min} kochen.
 		\step Mit frischem Reis sofort servieren.
 	}
 	
