--- a/Sections/Mains/sloppy_joe.tex
+++ b/Sections/Mains/sloppy_joe.tex
@@ -21,17 +21,17 @@
 		\unit[40]{ml} & Wasser \\
 		\unit[240]{ml} & Ketchup \\
 		& Salz und Pfeffer \\
-		4 & Hamburgerbr"otchen \\
+		4 & Hamburgerbrötchen \\
 	}
 	
 	\preparation
 	{
-		\step Paprika in kleine W"urfel schneiden. Knoblauch klein schneiden oder pressen und zu Paprika geben. Specktranchen in kleine St"ucke schneiden.
-		\step Hackfleisch ohne Zugabe von "Ol in einer Pfanne anbraten bis es braun wird.
+		\step Paprika in kleine Würfel schneiden. Knoblauch klein schneiden oder pressen und zu Paprika geben. Specktranchen in kleine Stücke schneiden.
+		\step Hackfleisch ohne Zugabe von Öl in einer Pfanne anbraten bis es braun wird.
 		\step Den Speck dazugeben.
-		\step Die Paprikaw"urfel mit dem Knoblauch hinzugeben. Danach das Wasser mit dem Ketchup hineingeben und gut vermischen.
-		\step Jetzt die Masse mit der Worcestersauce, dem Salz und Pfeffer w"urzen.
-		\step Das Ganze etwa 20-25 Minuten ohne Deckel k"ocheln lassen bis sich die Fl"ussigkeit deutlich reduziert hat.
-		\step Das Hackfleisch auf lauwarmen Hamburgerbr"otchen zusammen mit zum Beispiel Pommes servieren.
+		\step Die Paprikawürfel mit dem Knoblauch hinzugeben. Danach das Wasser mit dem Ketchup hineingeben und gut vermischen.
+		\step Jetzt die Masse mit der Worcestersauce, dem Salz und Pfeffer würzen.
+		\step Das Ganze etwa 20-25 Minuten ohne Deckel köcheln lassen bis sich die Flüssigkeit deutlich reduziert hat.
+		\step Das Hackfleisch auf lauwarmen Hamburgerbrötchen zusammen mit zum Beispiel Pommes servieren.
 	}	
 \end{recipe}
