--- a/Sections/Mains/wok_vegetables.tex
+++ b/Sections/Mains/wok_vegetables.tex
@@ -5,7 +5,7 @@
 	calory = {\unit[250]{kcal}},
 	source
 	]
-	{Wok-Gem"use}
+	{Wok-Gemüse}
 	\graph
 	{
 		small=pictures/wok_gemuese/wok_gemuese.png
@@ -13,25 +13,25 @@
 	
 	\ingredients
 	{
-		\unit[200]{g} & R"uebli \\
+		\unit[200]{g} & Rüebli \\
 		1 & Rote Paprika \\
 		1 & Gelbe Paprika \\
-		\unit[350]{g} & Brocooli \\
+		\unit[350]{g} & Brokkoli \\
 		1 & Knoblauchzehe \\
 		\unit[1]{Prise} & Salz \\
 		\unit[1]{dl} & Orangensaft \\
 		\unit[5]{EL} & Sojasauce \\
-		\unit[2]{EL} & "Ol \\
+		\unit[2]{EL} & Öl \\
 	}
 	
 	\preparation
 	{
-		\step R"uebli in scheiben schneiden. Paprika in Streifen schneiden. Broccoli in R"oschen teilen.
-		\step R"uebli, Paprika und Broccoli nacheinander in kochendem Salzwasser 2 Min. vorgaren.
-		\step "Ol im Wok erhitzen, Paprikastreifen unter r"uehren 3 Min. braten.
-		\step Knoblauch pressen und hinzu geben und 30-60 Sekunden braten.
-		\step Mit Orangensaft und Sojasauce abl"oschen.
-		\step R"uebli und Broccoli dazugeben und zugedeckt 2-3 Minuten garen lassen.	
+		\step Rüebli in Scheiben schneiden. Paprika in Streifen schneiden. Broccoli in Röschen teilen.
+		\step Rüebli, Paprika und Broccoli nacheinander in kochendem Salzwasser 2 Min. garen.
+		\step Öl im Wok erhitzen, Paprikastreifen unterrühren 3 Min. braten.
+		\step Knoblauch pressen und hinzugeben und 30-60 Sekunden braten.
+		\step Mit Orangensaft und Sojasauce ablöschen.
+		\step Rüebli und Broccoli dazugeben und zugedeckt 2-3 Minuten garen lassen.	
 		\step Etwas Salzen und Pfeffern.
 	}
 	
