--- a/Sections/SlowFood/bbqchickenwings.tex
+++ b/Sections/SlowFood/bbqchickenwings.tex
@@ -1,12 +1,12 @@
 \begin{recipe}
-	[
+[ 
 	preparationtime = {\unit[10]{min}},
 	bakingtime={\unit[4-5]{h}},
 	bakingtemperature,
 	portion,
 	calory,
 	source
-	]
+]
 	{BBQ Chicken Wings}
 	\graph
 	{
@@ -15,7 +15,7 @@
 	
 	\ingredients
 	{
-		\unit[300-400]{g}& Chicken Wings \\
+		\unit[300-400]{g} & Chicken Wings \\
 		\\
 		\multicolumn{2}{c}{\textbf{Marinade}}\\
 		\unit[1]{EL} & Honig \\
@@ -30,11 +30,11 @@
 	
 	\preparation
 	{
-		\step Zutaten f"ur Marinade gut mischen.
-		\step Chicken Wings in Plastiksack zusammen mit Marinade im K"uhlschrank f"ur 12-24h einziehen lassen.
+		\step Zutaten für Marinade gut mischen.
+		\step Chicken Wings in Plastiksack zusammen mit Marinade im Kühlschrank für 12-24h einziehen lassen.
 		\step 2h bei hoher Temperatur garen, danach weitere 2h bei niedriger Temperatur.
-		\step Falls knusprig gew"unscht, nach Ende der Garzeit kurz bei hoher Temperatur in den Ofen.
-		\step Zusammen mit Pommes Frites oder "ahnlichen servieren.
+		\step Falls knusprig gewünscht, nach Ende der Garzeit kurz bei hoher Temperatur in den Ofen.
+		\step Zusammen mit Pommes Frites oder ähnlichen servieren.
 	}
 	\hint
 	{
