--- a/Sections/SlowFood/pulledchicken.tex
+++ b/Sections/SlowFood/pulledchicken.tex
@@ -15,7 +15,7 @@
 	
 	\ingredients
 	{
-		\unit[2]{St"uck}& Puletbrust \\
+		\unit[2]{Stück}& Pouletbrust \\
 		\\
 		\multicolumn{2}{c}{\textbf{Sauce}}\\
 		\unit[1]{dl} & Ketchup \\
@@ -23,17 +23,17 @@
 		\unit[1]{EL} & Senf \\
 		\unit[1]{EL} & BBQ Sauce \\
 		\unit[1]{TL} & Zitronensaft \\
-		& Knoblauchpulver, Paprik, Cayennepfeffer \\
+		& Knoblauchpulver, Paprika, Cayennepfeffer \\
 		\\
 		4 & Hamburger Buns
 	}
 	
 	\preparation
 	{
-		\step Fleisch in Slow Cooker geben.
-		\step Zutaten f"ur Sauce in einer Sch"ussel glatt r"uhren, die H"alfte "ubers Fleisch geben, den Rest k"uhl stellen
-		\step F"ur 6h auf LOW garen.
-		\step Das Fleisch mit 2 Gabeln zerteilen. Mit etwas Sauce nochmal f"ur 30-60 Minuten garen.
+		\step Fleisch in Slow-Cooker geben.
+		\step Zutaten für Sauce in einer Schüssel glatt rühren, die Hälfte übers Fleisch geben, den Rest kühl stellen
+		\step Für 6h auf Low garen.
+		\step Das Fleisch mit 2 Gabeln zerteilen. Mit etwas Sauce nochmal für 30-60 Minuten garen.
 		\step Auf Hamburger Buns anrichten.
 	}
 \end{recipe}
