--- a/Sections/Snacks/egg_bacon.tex
+++ b/Sections/Snacks/egg_bacon.tex
@@ -18,7 +18,7 @@
 		4 & Eier\\
 		etwas & Toastbrot \\
 		\unit[4]{Tranchen} & Speck\\
-		etwas & Reibk"ase \\
+		etwas & Reibkäse \\
 		wenig & Pfeffer  \\
 		etwas & Paprika
 	}
@@ -27,10 +27,10 @@
 	{%
 		\step Mit einem Glas Toastbrot ausstechen und als Boden in Muffin Form legen
 		\step Rand der Form mit Speck umgeben
-		\step Etwas Reibk"ase auf Boden geben
-		\step Ei hinzuf"ugen
-		\step Nach Geschmack w"urzen
-		\step F"ur 17 Minuten in den Ofen
+		\step Etwas Reibkäse auf Boden geben
+		\step Ei hinzufügen
+		\step Nach Geschmack würzen
+		\step Für 17 Minuten in den Ofen
 	}
 	
 	
