--- a/Sections/Snacks/garlic_bread.tex
+++ b/Sections/Snacks/garlic_bread.tex
@@ -10,12 +10,12 @@
 	{Knoblauchbrot}
 	\graph
 	{
-		big=pictures/knoblauchbrot/knoblauchbrot
+		big=pictures/knoblauchbrot/knoblauchbrot.jpg
 	}
 	
 	\ingredients
 	{
-		\unit[ca. 300]{g} & Pariserbrot \\
+		\unit[ca. 300]{g} & Pariser Brot \\
 		\unit[100]{g} & Butter, weich \\
 		4 & Knoblauchzehen \\
 		\unit[2]{EL} & Petersilie \\
@@ -27,9 +27,9 @@
 	
 	\preparation
 	{
-		\step Brot halbieren, beide St"ucke quer halbieren
-		\step Butter und alle restlichen Zutaten mischen und gut verr"uhren
+		\step Brot halbieren, beide Stücke quer halbieren
+		\step Butter und alle restlichen Zutaten mischen und gut verrühren
 		\step Paste auf die Brotscheiben streichen
-		\step Im auf \unit[240]{C} Grad vorgeheizten Ofen (nur Oberhitze) auf der obersten Rille f"ur \unit[5]{min} r"osten.
+		\step Im auf \unit[240]{C} Grad vorgeheizten Ofen (nur Oberhitze) auf der obersten Rille für \unit[5]{min} rösten.
 	}
 \end{recipe}
