--- a/Sections/Snacks/nacho_dip.tex
+++ b/Sections/Snacks/nacho_dip.tex
@@ -6,7 +6,7 @@
 	portion = {\portion{4}},
 	calory
 	]
-	{K"asedip f"ur Nachos}
+	{Käsedip für Nachos}
 	
 	\graph
 	{
@@ -19,25 +19,25 @@
 		\unit[180]{g}  & Gouda \\
 		\unit[90]{g} & Peperoni  \\
 		1-2 & kleine Chilischoten\\
-		\unit[1]{Packung} & Schmelzk"ase\\
+		\unit[1]{Packung} & Schmelzkäse\\
 		\unit[3]{EL} & Hot-Chili-Sauce \\
-		\unit[20]{g} & Speisest"arke
+		\unit[20]{g} & Speisestärke
 	}
 	
 	\preparation
 	{%
-		\step Schmelzk"ase sowie Gouda, falls dieser nicht gerieben ist, klein schneiden. Die Peperoni und Chilischoten ebenfalls in kleine St"ucke schneiden.
-		\step Die Milch in einer Pfanne erw"armen. Etwas Milch f"ur das Anr"uhren mit Speisest"arke zur"uckhalten.
+		\step Schmelzkäse sowie Gouda, falls dieser nicht gerieben ist, klein schneiden. Die Peperoni und Chilischoten ebenfalls in kleine Stücke schneiden.
+		\step Die Milch in einer Pfanne erwärmen. Etwas Milch für das Anrühren mit Speisestärke zurückhalten.
 		\step Den Gouda in der warmen Milch schmelzen lassen.
-		\step Sobald der K"ase geschmolzen ist, den Schmelzk"ase sowie die \unit[3]{EL} Hot-Chili-Sauce sowie die Peperoni und Chilischoten hinzugeben. Das ganze kurz aufkochen.
-		\step Sobald sich der Schmelzk"ase verfl"ussigt hat, kann man mit der zur"uckbehaltenen Milch die Speisest"arke anr"uhren und in die Pfanne geben.
+		\step Sobald der Käse geschmolzen ist, den Schmelzkäse sowie die \unit[3]{EL} Hot-Chili-Sauce sowie die Peperoni und Chilischoten hinzugeben. Das ganze kurz aufkochen.
+		\step Sobald sich der Schmelzkäse verflüssigt hat, kann man mit der zurückbehaltenen Milch die Speisestärke anrühren und dazugeben.
 		\step Nochmals etwas aufkochen und dann vom Herd nehmen
 	}
 	
 	\hint
 	{%
-		Alternativ oder zus"atzlich zum Gouda kann auch Mozarella verwendet werden. \\
-		Wem es zu scharf ist, eine gr"une Peperoni ist milder als die Rote. \\
-		Dip kann auch im K"uhlschrank "uber l"angere Zeit gehalten werden. Dann entweder kalt geniessen oder vor dem Verzehr kurz aufw"armen.
+		Alternativ oder zusätzlich zum Gouda kann auch Mozzarella verwendet werden. \\
+		Wem es zu scharf ist, eine grüne Peperoni ist milder als die Rote. \\
+		Dip kann auch im Kühlschrank über längere Zeit gehalten werden. Dann entweder kalt geniessen oder vor dem Verzehr kurz aufwärmen.
 	}
 \end{recipe}
