--- a/Sections/Breakfast/breakfasthash.tex
+++ b/Sections/Breakfast/breakfasthash.tex
@@ -29,9 +29,9 @@
 	
 	\preparation
 	{
-		\step Kartoffeln würfeln und in Schale geben, mit etwas "Ol beträufeln und für 5 Minuten in die Mikrowelle geben
+		\step Kartoffeln würfeln und in Schale geben, mit etwas Öl beträufeln und für 5 Minuten in die Mikrowelle geben
 		\step Paprika in würfeln schneiden
-		\step Knoblauch pressen und in etwas "Ol anbraten
+		\step Knoblauch pressen und in etwas Öl anbraten
 		\step Wienerli würfeln und zusammen mit Speck zum Knoblauch geben und etwas anbraten
 		\step Paprikawürfel dazu geben und andünsten
 		\step Nun alles aus der Pfanne in ein Gefäss geben und die Kartoffeln etwas anbraten
