--- a/Sections/Dessert/carrot_cake.tex
+++ b/Sections/Dessert/carrot_cake.tex
@@ -7,7 +7,7 @@
 	calory,
 	source
 	]
-	{Aargauer R"ueblitorte}
+	{Aargauer Rüeblitorte}
 	
 	\graph
 	{
@@ -20,14 +20,14 @@
 		\unit[300]{g} & Zucker \\
 		5 & Eier \\
 		\unit[300]{g} & gemahlene Mandeln \\
-		\unit[300]{g} & R"uebli, fein gerieben \\
+		\unit[300]{g} & Rüebli, fein gerieben \\
 		1 & unbehandelte Zitrone \\
 		\unit[4]{EL} & Maizena \\		
 		\unit[4]{TL} & Backpulver \\
 		\unit[1/2]{TL} & Zimt \\		
 		& Nelkenpulver \\	
 		\unit[1]{Prise} & Salz 	\\
-		\unit[3]{EL} & Aprikosenkonfit"ure \\
+		\unit[3]{EL} & Aprikosenkonfitüre \\
 		\bf{Glasur} \\
 		1 & Eiweiss \\
 		\unit[300]{g} & Puderzucker \\
@@ -37,14 +37,14 @@
 	
 	\preparation
 	{
-		\step Zucker und 5 Eigelb in einer Sch"ussel gt verr"uhren bis die Masse hell ist.
-		\step Mandeln, R"uebli, Zitronenschale und 2 Essl"offel Zitronensaft zusammen mit Maizena, Backpulver, Zimt und Nelkenpulver beigeben und gut vermischen.
+		\step Zucker und 5 Eigelb in einer Schüssel gut verrühren bis die Masse hell ist.
+		\step Mandeln, Rüebli, Zitronenschale und 2 Esslöffel Zitronensaft zusammen mit Maizena, Backpulver, Zimt und Nelkenpulver beigeben und gut vermischen.
 		\step 5 Eiweisse mit dem Salz steif schlagen.
-		\step Eiweiss unter Tortenmasse ziehen und in die gefettete Tortenform geben.
-		\step Bei \unit[180]{°C} f"ur \unit[60]{min} in der unteren H"alfte des Ofens backen. Herausnehmen, etwas abk"uhlen lassen.
-		\step Aprikosenkonfit"ure in einer Pfanne erw"armen und auf Torte streichen.
-		\step F"ur die Glasur 1 Eiweiss in einer Sch"ussel schaumig schlagen. 
-		\step Puderzucker, Zitronensaft und Wasser beigeben und gut verr"uhren.
-		\step Glasur "uber die Torte geben. Mit einem Spachtel verstreichen und trocknen lassen.
+		\step Eiweiss unter Torten Masse ziehen und in die gefettete Tortenform geben.
+		\step Bei \unit[180]{°C} für \unit[60]{min} in der unteren Hälfte des Ofens backen. Herausnehmen, etwas abkühlen lassen.
+		\step Aprikosenkonfitüre in einer Pfanne erwärmen und auf Torte streichen.
+		\step Für die Glasur 1 Eiweiss in einer Schüssel schaumig schlagen. 
+		\step Puderzucker, Zitronensaft und Wasser beigeben und gut verrühren.
+		\step Glasur über die Torte geben. Mit einem Spachtel verstreichen und trocknen lassen.
 	}
 \end{recipe}
