--- a/Sections/Dessert/cheesecake.tex
+++ b/Sections/Dessert/cheesecake.tex
@@ -11,7 +11,7 @@
 	
 	\graph
 	{
-		big=pictures/cheesecake/cheesecake
+		big=pictures/cheesecake/cheesecake.png
 	}
 	
 	\ingredients
@@ -22,19 +22,19 @@
 		\unit[75]{g} & Butter \\
 		\unit[\nicefrac{1}{4}]{TL} & Zimt \\
 		\multicolumn{2}{c}{}\\
-		\multicolumn{2}{c}{\textbf{F"ullung}}\\
-		\unit[450]{g} & Frischk"ase \\
+		\multicolumn{2}{c}{\textbf{Füllung}}\\
+		\unit[450]{g} & Frischkäse \\
 		\unit[200]{g} & Mascarpone \\
 		\unit[140]{g} & Zucker \\
-		\unit[2]{Pck} & Vanillezucker \\
-		\unit[15]{g} & Speisest"arke \\
+		\unit[2]{Pack} & Vanillezucker \\
+		\unit[15]{g} & Speisestärke \\
 		4 & Eier \\
 		\nicefrac{1}{2} & Zitrone \\
 		1 Prise & Salz \\
-		\unit[100]{g} & Créme fraîche \\
+		\unit[100]{g} & Crème fraîche \\
 		\multicolumn{2}{c}{}\\
 		\multicolumn{2}{c}{\textbf{Glasur}}\\
-		3 Bl"atter & Gelatine \\
+		3 Blätter & Gelatine \\
 		\unit[500]{g} & Erdbeeren \\
 		\unit[30]{ml} & Erdbeersaft \\
 		\unit[50]{g} & Zucker
@@ -43,19 +43,19 @@
 	\preparation
 	{
 		\step \textbf{Tortenboden}\\
-		Den Ofen auf \unit[175]{°C} vorheizen. Die Butterkekse zerkr"umeln. Parallel die Butter schmelzen lassen (am besten in Pfanne auf kleiner Stufe). Sobald die Kekse zerkleinert sind, die geschmolzene Butter sowie den Zucker und Zimt dazugeben und gut vermischen. Das ganze in eine gefettete Springform geben und fest andr"ucken. Nach \unit[10]{min} herausnehmen und ausk"uhlen lassen.
-		\step \textbf{F"ullung} \\
-		Den Frischk"ase mit Zucker und Vanillezucker r"uhren bis der Zucker sich gel"ost hat. Dann Mascarpone und Speisest"arke unterr"uhren. Nach und nach die Eier beigeben. Danach zuerst die Schale der halben Zitrone, und danach \unit[15]{ml} Saft beigeben. Zum Schluss eine Prise Salz beif"ugen.
-		\step Die Creme auf dem Tortenboden verteilen. Das Ganze wieder bei \unit[175]{°C} im unteren Teil des Ofens \unit[50]{min} backen. Dann \unit[60]{min} im abgeschalteten Ofen ruhen lassen. Danach herausnehmen und ausk"uhlen lassen.
-		\step Créme fraîche auf den Kuchen streichen. Danach im K"uhlschrank etwas fest werden lassen (ca. \unit[1-2]{h}). \newpage
+		Den Ofen auf \unit[175]{°C} vorheizen. Die Butterkekse zerkrümeln. Parallel die Butter schmelzen lassen (am besten in Pfanne auf kleiner Stufe). Sobald die Kekse zerkleinert sind, die geschmolzene Butter sowie den Zucker und Zimt dazugeben und gut vermischen. Das Ganze in eine gefettete Springform geben und fest andrücken. Nach \unit[10]{min} herausnehmen und auskühlen lassen.
+		\step \textbf{Füllung} \\
+		Den Frischkäse mit Zucker und Vanillezucker rühren bis der Zucker sich gelöst hat. Dann Mascarpone und Speisestärke unterrühren. Nach und nach die Eier beigeben. Danach zuerst die Schale der halben Zitrone und danach \unit[15]{ml} Saft beigeben. Zum Schluss eine Prise Salz beifügen.
+		\step Die Creme auf dem Tortenboden verteilen. Das Ganze wieder bei \unit[175]{°C} im unteren Teil des Ofens \unit[50]{min} backen. Dann \unit[60]{min} im abgeschalteten Ofen ruhen lassen. Danach herausnehmen und auskühlen lassen.
+		\step Crème fraîche auf den Kuchen streichen. Danach im Kühlschrank etwas fest werden lassen (ca. \unit[1-2]{h}). \newpage
 		\step \textbf{Glasur}\\
-		Gelatine in warmen Wasser etwas einweichen lassen. Die Erdbeeren klein schneiden und die H"alfte zur"uckbehalten. Die andere H"alfte zusammen mit dem Saft und dem Zucker ca. \unit[3]{min}  lang kochen. Dabei st"andig r"uhren. Danach mit einem P"urierstab p"urieren und abk"uhlen lassen. Die restlichen Erdbeeren hinzuf"ugen. Dann die Gelatine aufl"osen und beif"ugen. Die ganze Masse kann dann "uber den Kuchen verteilt werden. Danach im K"uhlschrank fest werden lassen.
+		Gelatine in warmen Wasser etwas einweichen lassen. Die Erdbeeren klein schneiden und die Hälfte zurückbehalten. Die andere Hälfte zusammen mit dem Saft und dem Zucker ca. \unit[3]{min}  lang kochen. Dabei ständig rühren. Danach mit einem Pürierstab pürieren und abkühlen lassen. Die restlichen Erdbeeren hinzufügen. Dann die Gelatine auflösen und beifügen. Die ganze Masse kann dann über den Kuchen verteilt werden. Danach im Kühlschrank fest werden lassen.
 	}
 	
 	\hint
 	{
-		Anstatt den Boden mit Butterkekskr"umeln zu machen, kann auch ein normaler M"urbeteig verwendet werden. \\
-		Wenn kein Erdbeersaft vorhanden ist kann man stattdessen auch normalen Erdbeersirup verwenden.\\
-		Anstatt Erdbeeren sind auch Cakes mit anderen Fr"uchten m"oglich.
+		Anstatt den Boden mit Butterkekskrümeln zu machen, kann auch ein normaler Mürbeteig verwendet werden. \\
+		Man  kann auch Erdbeersirup statt Erdbeersaft verwenden.\\
+		Anstatt Erdbeeren sind auch Cakes mit anderen Früchten möglich.
 	}
 \end{recipe}
