--- a/Sections/Dessert/haselnusstorte.tex
+++ b/Sections/Dessert/haselnusstorte.tex
@@ -18,7 +18,7 @@
 	{
 		\multicolumn{2}{c}{\textbf{Torte}}\\
 		\unit[220]{g} & Zucker \\
-		\unit[300]{g} & Haseln"usse (gemahlen) \\
+		\unit[300]{g} & Haselnüsse (gemahlen) \\
 		6 & Eier \\
 		& Rum \\
 		& Salz \\
@@ -37,10 +37,10 @@
 		\step Eiweisse mit einer Prise Salz steif schlagen
 		\step 2 Esslöffel Zucker zum Eischnee geben und kurz weiterschlagen
 		\step Zwieback zusammen mit 300g Haselnüssen lagenweise mit Eischnee zur Masse geben.
-		\step Eine 24cm Springform mit Backpapier auslegen und die Ränder einfetten
+		\step Eine 24 cm Springform mit Backpapier auslegen und die Ränder einfetten
 		\step Masse in Springform geben und für 20 Minuten in der unteren Hälfte bei 180° backen. Danach Temperatur auf 150° stellen und für weitere 40 Minuten im Ofen lassen.
-		\step Torte herausnehmen und auskühlen lassen. Danach im Kühlschrank für 2-3 Tage aufbewahren, dann kann die Torte quer halbiert werden.
-		\step Für die Füllung den Rahm steif schlagen, danach die Haselnüsse, Kaffepulver und den Zucker zum Rahm mischen und auf die halbierte Torte geben
+		\step Die Torte herausnehmen und auskühlen lassen. Danach im Kühlschrank für 2-3 Tage aufbewahren, dann kann die Torte quer halbiert werden.
+		\step Für die Füllung den Rahm steif schlagen, danach die Haselnüsse, Kaffeepulver und den Zucker zum Rahm mischen und auf die halbierte Torte geben
 	}
 	\hint
 	{
