--- a/Sections/Mains/chicken_rice_pan.tex
+++ b/Sections/Mains/chicken_rice_pan.tex
@@ -7,17 +7,17 @@
 	calory,
 	source
 	]
-	{H"uhnchen-Reis-Pfanne}
+	{Hühnchen-Reis-Pfanne}
 	
 	\graph
 	{
-		big=pictures/huhn_reis_pfanne/huhn_reis_pfanne
+		big=pictures/huhn_reis_pfanne/huhn_reis_pfanne.jpg
 	}
 	
 	\ingredients
 	{
-		\unit[\nicefrac{1}{2}]{EL} & Erdnuss"ol \\
-		\unit[450]{g} & H"uhnerfleisch \\
+		\unit[\nicefrac{1}{2}]{EL} & Erdnussöl \\
+		\unit[450]{g} & Hühnerfleisch \\
 		\unit[3]{EL} & Sojasauce \\
 		2 & Karotten \\
 		1 & rote Paprika \\
@@ -29,16 +29,16 @@
 	
 	\preparation
 	{
-		\step Das Fleisch, die Karotten und Paprika in W"urfel schneiden
-		\step Das "ol bei mittlerer Hitze im Wok erhitzen
+		\step Das Fleisch, die Karotten und Paprika in Würfel schneiden
+		\step Das Öl bei mittlerer Hitze im Wok erhitzen
 		\step Fleisch und \unit[2]{EL} Sojasauce zugeben und \unit[5-6]{min} braten
-		\step Karotten, Paprika, Erbsen und Mais zugeben und alles \unit[5]{min} unter R"uhren braten
-		\step Den Reis unterr"uhren und gut erhitzen
+		\step Karotten, Paprika, Erbsen und Mais zugeben und alles \unit[5]{min} unter Rühren braten
+		\step Den Reis unterrühren und gut erhitzen
 		\step Die Eier verquirlen und zusammen mit der restlichen Sojasauce beigeben. Das ganze gut vermengen und dann sofort servieren
 	}
 	
 	\hint
 	{
-		Eignet sich auch gut zum aufw"armen in der Mikrowelle
+		Eignet sich auch gut zum Aufwärmen in der Mikrowelle
 	}
 \end{recipe}
