--- a/Sections/Mains/lasagne.tex
+++ b/Sections/Mains/lasagne.tex
@@ -10,7 +10,7 @@
 	{Lasagne}
 	\graph
 	{
-		small=pictures/lasagne/lasagne
+		small=pictures/lasagne/lasagne.png
 	}
 	
 	\ingredients
@@ -18,30 +18,30 @@
 		\unit[600-700]{g} & Hackfleisch gemischt \\
 		reichlich & Knoblauch \\
 		1 & Zwiebel gehackt \\
-		\unit[1-2]{W"urfel} & gebundene Bratensauce \\
+		\unit[1-2]{Würfel} & gebundene Bratensauce \\
 		\unit[2]{dl} & Rotwein \\
-		\unit[1]{B"uchse} & Pelati gehackt \\
+		\unit[1]{Büchse} & Pelati gehackt \\
 		\unit[5]{dl} & Weisse Sauce \\
-		\unit[1]{Pack} & Nudelteigbl"atter \\
+		\unit[1]{Pack} & Nudelteigblätter \\
 		\unit[1]{Pack} & Parmesan
 	}
 	
 	\preparation
 	{
 		\step Fleisch mit dem Zwiebeln und Knoblauch anbraten.
-		\step Mit der Bratensauce sowie dem Rotwein abl"oschen.
-		\step Reichlich W"urzen und die Pelati hinzugeben. Das Ganze mindestens \unit[30]{min} k"ocheln lassen.
-		\step Am Ende der Kochzeit die Sauce auf Sch"arfe probieren. Nach eigenem Gusto nochmals w"urzen.
+		\step Mit der Bratensauce sowie dem Rotwein ablöschen.
+		\step Reichlich Würzen und die Pelati hinzugeben. Das Ganze mindestens \unit[30]{min} köcheln lassen.
+		\step Am Ende der Kochzeit die Sauce auf Schärfe probieren. Nach eigenem Gusto nochmals würzen.
 		\step Die Weisse Sauce aufkochen
-		\step Eine erste Lage Nudelteigbl"atter in die ausgebutterte Gratinform legen. Dar"uber dann eine Schicht Fleisch. Dies solange bis kein Fleisch mehr "ubrig ist. Die oberste Schicht sind wieder Nudelteigbl"atter.
-		\step Die Weisse Sauce "uber die Lasagne geben und danach mit Parmesan bestreuen
-		\step Lasagne f"ur ca. \unit[20]{min} in den auf \unit[200-220]{°C} vorgeheizten Ofen schieben.
+		\step Eine erste Lage Nudelteigblätter in die ausgebutterte Gratinform legen. Darüber dann eine Schicht Fleisch. Dies solange bis kein Fleisch mehr übrig ist. Die oberste Schicht sind wieder Nudelteigblätter.
+		\step Die Weisse Sauce über die Lasagne geben und danach mit Parmesan bestreuen
+		\step Lasagne für ca. \unit[20]{min} in den auf \unit[200-220]{°C} vorgeheizten Ofen schieben.
 	}
 	
 	\hint
 	{
-		Empfohlene Gew"urze: Pfeffer, Paprika (scharf), Oregano \\
+		Empfohlene Gewürze: Pfeffer, Paprika (scharf), Oregano \\
 		Die Weisse Sauce gibt es im Beutel zu kaufen (sind exakt \unit[5]{dl}) \\
-		Wer es k"asig mag kann den Parmesan auch auf alle Fleischchichten geben
+		Wer es käsig mag, kann den Parmesan auch auf alle Fleischschichten geben
 	}
 \end{recipe}
