--- a/Sections/SlowFood/bbqpulledpork.tex
+++ b/Sections/SlowFood/bbqpulledpork.tex
@@ -26,7 +26,7 @@
 		\unit[TL]{1/2} & Knoblauch  \\
 		\unit[TL]{1/2} & Cayennepfeffer \\
 		\multicolumn{2}{c}{\textbf{Sauce}}\\
-		nach Gef"uhl & BBQ Sauce \\
+		nach Gefühl & BBQ Sauce \\
 		\unit[1]{dl} & Apfelsaft \\
 		\unit[2]{EL} & Honig \\
 	}
@@ -34,10 +34,10 @@
 	\preparation
 	{
 		\step Fleisch rundherum mit Senf bestreichen.
-		\step Alle Gew"urze f"ur den Rub mischen und Fleisch rundherum damit bestreuen.
+		\step Alle Gewürze für den Rub mischen und Fleisch rundherum damit bestreuen.
 		\step Ca. 1 Stunde ruhen lassen.
 		\step Apfelsaft, Honig und braunen Zucker mischen und zum Fleisch geben.
-		\step F"ur 7-8h in den Slow-Cooker geben und auf Low garen.
-		\step Fleisch heraus nehmen und mit 2 Gabeln auseinanderpfl"ucken. Zutaten f"ur Sauce mischen, zum Fleisch geben und auf Burger Buns verteilen.
+		\step Für 7-8h in den Slow-Cooker geben und auf Low garen.
+		\step Fleisch heraus nehmen und mit 2 Gabeln auseinanderpflücken. Zutaten für Sauce mischen, zum Fleisch geben und auf Burger Buns verteilen.
 	}
 \end{recipe}
